--- a/_posts/2021-10-05-1004-1010.md
+++ b/_posts/2021-10-05-1004-1010.md
@@ -122,3 +122,107 @@ export default Todos;
 ### 정규 표현식 확인 사이트
 
 [정규 표현식 확인 사이트](https://regexr.com/)
+
+<br>
+
+## 1005
+
+# 62일 차
+
+## 프로그래머스 카카오 Level1 - 비밀지도
+
+```javascript
+const solution = (n, arr1, arr2) => {
+  return arr1.map((v, i) => {
+    let tmp1 = arr1[i].toString(2).padStart(n, "0");
+    let tmp2 = arr2[i].toString(2).padStart(n, "0");
+
+    return [...tmp1]
+      .map((_, i) => ((tmp1[i] | tmp2[i]) === 1 ? "#" : " "))
+      .join("");
+  });
+};
+```
+
+- 처음에 코드를 조금 더럽게 썼는데 좀 더 좋은 방법이 있어서 정리해보았다.
+- 우선 arr1과 arr2의 요소들을 2진수로 바꾸는데 `toString(2)`를 사용하면 간단하게 2진수로 변경할 수 있었다.
+- String.prototype 메서드 중 `padStart()` 메서드를 사용하면 현재 문자열의 시작을 다른 문자열로 채워, 주어진 길이를 만족하는 새로운 문자열을 반환할 수 있다. 첫 번째 인수로 만족할 length 값을, 두 번째 인수로 채울 값을 넘겨준다.
+- 비트 연산자 `|` 를 사용하였다. or를 가리킨다.
+
+## 2교시
+
+브라우저 상에서 스크립트 파일을 실행시킬 수 있는 유일한 방법은 script 태그이다.
+
+html은 정보와 구조를 나타낸다.
+정보는 텍스트와 태그, 구조는 중첩 관계를 말한다.
+html이 기본적으로 가지고 있는 스타일은 브라우저가 제공하는 유저 에이전트 스타일이다.
+
+결국 html, css, js는 뷰를 만들기 위한 언어이다.
+html은 브라우저에서만 동작하기에 결국 렌더링 과정을 아는 것이 중요하다.
+여기서의 렌더링이란 뷰를 만들어 내는 것
+리플로우가 웬만하면 발생하지 않도록 하는 것이 중요하다.
+
+클라이언트가 response를 하면 서버가 리소스를 response를 주는데, 이때 리소스를 정적 리소스라고 한다. (이미 가지고 있기 때문에)
+
+### 3교시
+
+API는 애플리케이션 프로그램 인터페이스
+즉 프로그램과 개발자의 인터페이스다.
+DOM API는 프로퍼티로 제공되는 것이 있고 메서드로 제공되는 것이 있는데, 프로퍼티는 대부분 접근자 프로퍼티이다.
+
+리플로우를 발생시키지 않는 코드를 작성해야 한다.
+작은 프로그램에서는 버벅임을 느끼기 힘들지만 큰 애플리케이션에서는 크게 느껴진다.
+
+### 4교시
+
+DOM 생성이 완료된 직후 DOMContentLoaded 이벤트 발생
+
+실무에서 DOM API를 사용하지 않는 이유  
+-> 디자인을 바꿨는데 JS 코드를 수정하고 다시 테스트해야 한다는 문제점이 있다.
+
+그렇다면 html이 자바스크립트에 의존하게 하는 방법?  
+-> html을 자바스크립트가 문자열로 가지고 있는 방법
+
+<br />
+
+## 프로그래머스 카카오 Level2 - 뉴스 클러스터링
+
+```javascript
+const solution = (str1, str2) => {
+  const arr1 = [];
+  const arr2 = [];
+  const reg = /^[a-z]+$/i;
+  const sh = new Map();
+
+  for (let i = 1; i < str1.length; i++) {
+    if (reg.test(str1.substring(i - 1, i + 1))) {
+      arr1.push(str1.substring(i - 1, i + 1).toLowerCase());
+    }
+  }
+
+  for (let i = 1; i < str2.length; i++) {
+    if (reg.test(str2.substring(i - 1, i + 1))) {
+      arr2.push(str2.substring(i - 1, i + 1).toLowerCase());
+    }
+  }
+
+  let interCnt = 0;
+
+  for (let x of arr1) {
+    sh.set(x, (sh.get(x) || 0) + 1);
+  }
+  for (let x of arr2) {
+    if (sh.get(x)) {
+      sh.set(x, sh.get(x) - 1);
+      interCnt++;
+    }
+  }
+
+  const unionCnt = arr1.length + arr2.length - interCnt;
+
+  return unionCnt ? Math.floor((interCnt / unionCnt) * 65536) : 65536;
+};
+```
+
+- test 메서드를 이용하고 싶을 때, 예를 들어 소문자로만 이루어진 문자를 구하고 싶다면 `/^[a-z]+$/` a부터 z까지 하나 이상 존재하는데 이로 시작하고 끝난다는 뜻으로 쓰이는 정규 표현식을 사용한다.
+- 합집합을 구하기 위해서는 두 집합 총합 - 교집합의 연산으로도 구할 수 있다.
