--- a/_posts/2021-10-05-1004-1010.md
+++ b/_posts/2021-10-05-1004-1010.md
@@ -226,3 +226,38 @@ const solution = (str1, str2) => {
 
 - test 메서드를 이용하고 싶을 때, 예를 들어 소문자로만 이루어진 문자를 구하고 싶다면 `/^[a-z]+$/` a부터 z까지 하나 이상 존재하는데 이로 시작하고 끝난다는 뜻으로 쓰이는 정규 표현식을 사용한다.
 - 합집합을 구하기 위해서는 두 집합 총합 - 교집합의 연산으로도 구할 수 있다.
+
+## 1006
+
+# 63일 차
+
+forEach를 사용하는 상황은 상태를 변경시켜야 할 때, map은 상태를 변경 시켜지 않고 새로운 배열을 반환
+
+### 식별자 네이밍
+
+id를 안쓰는 이유?  
+-> id는 에러를 발생시키지 않아서 혼란을 유발할 수 있다. 클래스 이름을 잘 짓자
+
+getElements 계열은 사용하지 말자. ( 부작용을 가지고 있다. )  
+getElementById()와 querySelector만 사용하자
+
+html 어트리뷰트는 value는 초기값, value 프로퍼티는 최신 상태를 반영
+
+### InnerHtml의 장단점
+
+- 간편하고, 가독성이 좋다.
+- untrusted 데이터, 즉 사용자의 정보가 자바스크립트 코드로 흘러들어오기 때문에 XSS 공격에 취약하다
+- 기존의 데이터를 지우고, 모두 다시 그린다.
+
+키보드 이벤트에서 keyCode 대신 key를 사용할 것을 공식 문서에서 권장한다.
+
+동적으로 생성되는 요소에 접근하여 요소 노드 객체를 얻어오려면 코드가 더러워진다.  
+-> 이벤트를 위임하여 문제를 해결한다.
+
+자바스크립트와 css 둘 중 어느 것을 사용해도 구현이 가능하면 css를 사용한다.
+
+상태가 변경이 되면 render 함수를 호출하여 뷰를 리렌더링 해야 한다.  
+-> 상태가 변하면 뷰가 변한다.
+
+이벤트 핸들러 안에서 모든 작업을 다 하려고 하면 코드가 더러워질 수 밖에 없다.  
+-> 함수로 만든다.
