--- a/_posts/2021-10-05-1004-1010.md
+++ b/_posts/2021-10-05-1004-1010.md
@@ -478,3 +478,71 @@ console.log(new P('Kim')); // Person { name: 'Kim' }
 ### 출처
 
 모던 자바스크립트 Deep Dive
+
+## 1010
+
+# 일 - 알고리즘
+
+## 프로그래머스 Level2 - 순위 검색
+
+```javascript
+function solution(info, query) {
+  let answer = [];
+  const sh = new Map();
+
+  function DFS(arr, score, s) {
+    const key = arr.join("");
+
+    sh.get(key) ? sh.get(key).push(+score) : sh.set(key, [+score]);
+
+    for (let i = s; i < arr.length; i++) {
+      const tmp = [...arr];
+      tmp[i] = "-";
+      DFS(tmp, score, i + 1);
+    }
+  }
+
+  for (const x of info) {
+    const [a, b, c, d, e] = x.split(" ");
+    DFS([a, b, c, d], e, 0);
+  }
+
+  for (const [, value] of sh) {
+    value.sort((a, b) => a - b);
+  }
+
+  for (const x of query) {
+    const [key, value] = x.split(" and ").join("").split(" ");
+    const arr = sh.get(key);
+
+    if (arr) {
+      let lt = 0;
+      let rt = arr.length;
+
+      while (lt < rt) {
+        let mid = Math.floor((lt + rt) / 2);
+        if (arr[mid] >= +value) {
+          rt = mid;
+        } else {
+          lt = mid + 1;
+        }
+      }
+      answer.push(arr.length - rt);
+    } else {
+      answer.push(0);
+    }
+  }
+
+  return answer;
+}
+```
+
+- 많은 개념들이 집합된 아주 어려운 문제였다고 생각한다.
+- 첫 번째로 쿼리를 탐색하기 위해 데이터를 만들 필요가 있었다.
+  - info 데이터를 파싱하여 점수를 value로 해서 map에 삽입하였다.
+  - 각 요소가 -로 될 때도 포함해서 모두 map에 넣어주었다.
+  - 같은 키가 중복되는 경우를 고려해서 값을 배열 형태로 설정했다. 이때 새로운 값을 삽입할 때 새로운 배열을 스프레드 문법으로 생성하면 시간 오류가 났다. push로 기존 배열에 삽입하는 방식으로 해결해야만 효율성을 높일 수 있었다.
+  - map에 삽입하는 경우 키에 해당하는 값이 없으면 다시 빈 배열로 세팅해줬는데, 이때 변수에 할당하게 되면 변수에는 정적인 값이 나오기 때문에 빈 배열로 접근할 수가 없다. 동적으로 `sh.get()`을 사용해 접근해야 했다.
+- 그리고 이분 탐색을 활용하기 위해 점수가 저장된 배열을 오름차순으로 정렬하였다.
+  - 정렬은 다 세팅하고 난 이후에 해야 효율성을 높일 수 있다.
+- 마지막으로 이분탐색을 사용해서 문제를 해결하였다. 단, 키에 해당하는 값이 있을때만 이분탐색을 돌렸다.
