--- a/_posts/2021-10-12-1011-1017.md
+++ b/_posts/2021-10-12-1011-1017.md
@@ -185,3 +185,36 @@ module.exports = {
 ### 출처
 
 모던 자바스크립트 Deep Dive
+
+## 1012
+
+## 프로그래머스 카카오 Level2 - 파일명 정렬
+
+```javascript
+function solution(files) {
+  const arr = [];
+  for (const x of files) {
+    const [, head, num] = x.match(/([a-zA-z-. ]+)([0-9]{1,5})/);
+    arr.push([x, head, num]);
+  }
+
+  arr.sort((a, b) =>
+    a[1].toLowerCase() > b[1].toLowerCase()
+      ? 1
+      : b[1].toLowerCase() > a[1].toLowerCase()
+      ? -1
+      : +a[2] > +b[2]
+      ? 1
+      : +b[2] > +a[2]
+      ? -1
+      : 0
+  );
+  return arr.map((v) => v[0]);
+}
+```
+
+- 이번에 공부한 정규 표현식을 사용하여 받은 데이터를 파싱하였다.
+  - 영어 대소문자와 . - ' ' 를 계속 그룹화하고, 숫자를 만나면 최대 5개까지 그룹화하였다.
+  - 여기서 띄워쓰기를 어떻게 표현하는지 제대로 몰라서 문제를 틀렸었다.
+- 정렬은 항상 할때마다 헷갈린다.
+  - 반환값이 1보다 크면 바꾸고, -1 이하이면 안바꾼다.
