--- a/_posts/2021-10-12-1011-1017.md
+++ b/_posts/2021-10-12-1011-1017.md
@@ -218,3 +218,85 @@ function solution(files) {
   - 여기서 띄워쓰기를 어떻게 표현하는지 제대로 몰라서 문제를 틀렸었다.
 - 정렬은 항상 할때마다 헷갈린다.
   - 반환값이 1보다 크면 바꾸고, -1 이하이면 안바꾼다.
+
+## 1013
+
+## 프로그래머스 카카오 Level2 - 튜플
+
+```javascript
+function solution(s) {
+  const answer = [];
+
+  const arr = s
+    .slice(1, s.length - 1)
+    .split("}")
+    .join("")
+    .split("{");
+
+  arr.shift();
+
+  for (let i = 0; i < arr.length; i++) {
+    const tmp = arr[i].replace(/,$/, (match) =>
+      match.substring(0, match.length - 1)
+    );
+
+    arr[i] = tmp.split(",");
+  }
+
+  arr.sort((a, b) => a.length - b.length);
+  const nh = new Set(arr.flat(1));
+  for (const x of nh) {
+    answer.push(+x);
+  }
+
+  return answer;
+}
+```
+
+- 최근에 학습한 정규 표현식과 set을 적극적으로 활용했다.
+- 정규 표현식에는 콜백함수를 넘길 수 있는데, 이를 활용하면 매칭된 정규 표현식을 조작해서 반환할 수 있다.
+
+## 프로그래머스 카카오 Level2 - 오픈 채팅방
+
+```javascript
+function solution(record) {
+  const answer = [];
+  const sh = new Map();
+
+  for (const info of record) {
+    const [behave, id, nick] = info.split(" ");
+    if (behave === "Leave") {
+      answer.push([id, behave]);
+    } else {
+      sh.set(id, nick);
+      if (behave === "Enter") {
+        answer.push([id, behave]);
+      }
+    }
+  }
+
+  for (let i = 0; i < answer.length; i++) {
+    const [id, behave] = answer[i];
+
+    answer[i] =
+      behave === "Enter"
+        ? `${sh.get(id)}님이 들어왔습니다.`
+        : `${sh.get(id)}님이 나갔습니다.`;
+  }
+
+  return answer;
+}
+
+console.log(
+  solution([
+    "Enter uid1234 Muzi",
+    "Enter uid4567 Prodo",
+    "Leave uid1234",
+    "Enter uid1234 Prodo",
+    "Change uid4567 Ryan",
+  ])
+);
+```
+
+- 간단한 문자열 파싱 문제였다.
+- 점점 자바스크립트 실력이 향상하는 것을 체감한다.
