--- a/_posts/2021-10-12-1011-1017.md
+++ b/_posts/2021-10-12-1011-1017.md
@@ -300,3 +300,57 @@ console.log(
 
 - 간단한 문자열 파싱 문제였다.
 - 점점 자바스크립트 실력이 향상하는 것을 체감한다.
+
+## 1014
+
+## 프로그래머스 카카오 Level2 - 후보키
+
+```javascript
+function solution(relation) {
+  let answer = 0;
+
+  function isAnswer(arr) {
+    const newArr = [];
+    for (const x of relation) {
+      let tmp = "";
+      for (const index of arr) {
+        tmp += x[index];
+      }
+      if (newArr.includes(tmp)) return false;
+      newArr.push(tmp);
+    }
+    return true;
+  }
+
+  let tmp = [];
+  const nh = new Map();
+
+  function DFS(L, s, c) {
+    if (L === c) {
+      const arr = [...tmp];
+      if (isAnswer(arr)) {
+        if (![...nh].some(([key]) => key.every((v) => tmp.includes(v)))) {
+          nh.set(arr, 1);
+          answer++;
+        }
+      }
+    } else {
+      for (let i = s; i < relation[0].length; i++) {
+        tmp.push(i);
+        DFS(L + 1, i + 1, c);
+        tmp.pop();
+      }
+    }
+  }
+
+  for (let i = 0; i < relation[i].length; i++) {
+    tmp = [];
+    DFS(0, 0, i + 1);
+  }
+
+  return answer;
+}
+```
+
+- DFS로 조합을 구하고, 해당 키로 모든 릴레이션을 식별할 수 있는지 구할 수 있는 isAnswer 함수를 작성했다.
+- 맵을 생성해서 맵에 조합에 속하는 키가 하나라도 있다면 최소성을 만족하지 못하기 때문에 제외하였고, 그렇지 않다면 최소성을 만족하기에 맵에 넣고 답의 개수를 1 증가시켜서 문제를 해결하였다.
