--- a/_posts/2021-10-12-1011-1017.md
+++ b/_posts/2021-10-12-1011-1017.md
@@ -354,3 +354,70 @@ function solution(relation) {
 
 - DFS로 조합을 구하고, 해당 키로 모든 릴레이션을 식별할 수 있는지 구할 수 있는 isAnswer 함수를 작성했다.
 - 맵을 생성해서 맵에 조합에 속하는 키가 하나라도 있다면 최소성을 만족하지 못하기 때문에 제외하였고, 그렇지 않다면 최소성을 만족하기에 맵에 넣고 답의 개수를 1 증가시켜서 문제를 해결하였다.
+
+## 1015
+
+## 프로그래머스 카카오 Level2 - 프렌즈 4블록
+
+```javascript
+function solution(m, n, board) {
+  let answer = 0;
+  const dx = [0, 1, 1];
+  const dy = [1, 1, 0];
+  board = board.map((v) => v.split(""));
+
+  while (true) {
+    let tmp = 0;
+    let ch = Array.from(Array(m), () => Array(n).fill(0));
+    for (let x = 0; x < m - 1; x++) {
+      for (let y = 0; y < n - 1; y++) {
+        let flag = true;
+        if (board[x][y] === 0) flag = false;
+        for (let k = 0; k < 3; k++) {
+          const nx = x + dx[k];
+          const ny = y + dy[k];
+
+          if (board[nx][ny] !== board[x][y]) flag = false;
+        }
+        if (flag) {
+          if (ch[x][y] === 0) {
+            tmp++;
+            ch[x][y] = 1;
+          }
+          for (let k = 0; k < 3; k++) {
+            const nx = x + dx[k];
+            const ny = y + dy[k];
+
+            if (ch[nx][ny] === 0) {
+              tmp++;
+              ch[nx][ny] = 1;
+            }
+          }
+        }
+      }
+    }
+
+    for (let x = 0; x < m; x++) {
+      for (let y = 0; y < n; y++) {
+        if (ch[x][y] === 1) {
+          for (let k = x; k > 0; k--) {
+            board[k][y] = board[k - 1][y];
+            board[k - 1][y] = 0;
+          }
+        }
+      }
+    }
+
+    if (!tmp) break;
+    answer += tmp;
+  }
+
+  return answer;
+}
+```
+
+- 한 문제 내부에서 이렇게 많은 로직을 작성해야한다는 사실이 생소하여 처음에는 약간 거부감이 느껴졌다.
+- 반복문만 돌리면 해결하는 문제였는데 처음부터 어렵게 생각해서 BFS로 접근한 것이 실수였다.
+- 요소를 반복하여 돌면서 우, 우하, 하 위치에 있는 요소를 확인하여 모두 현재 요소와 같은지 비교하고 같다면 체크, 같지 않다면 패스하였다.
+- 해당 요소가 부서지면 위에 요소를 내려줘야했기에 이를 해결해주는 반복문도 작성하였다.
+- 위 로직을 부서지는 요소가 있는 동안 계속해서 반복하였다. 이렇게 하나하나 해결해나가는 문제도 익숙해지도록 연습해야겠다.
