--- a/_posts/2021-10-12-1011-1017.md
+++ b/_posts/2021-10-12-1011-1017.md
@@ -421,3 +421,37 @@ function solution(m, n, board) {
 - 요소를 반복하여 돌면서 우, 우하, 하 위치에 있는 요소를 확인하여 모두 현재 요소와 같은지 비교하고 같다면 체크, 같지 않다면 패스하였다.
 - 해당 요소가 부서지면 위에 요소를 내려줘야했기에 이를 해결해주는 반복문도 작성하였다.
 - 위 로직을 부서지는 요소가 있는 동안 계속해서 반복하였다. 이렇게 하나하나 해결해나가는 문제도 익숙해지도록 연습해야겠다.
+
+## 1016
+
+## 프로그래머스 카카오 Level3 - 추석 트래픽
+
+```javascript
+function solution(lines) {
+  let answer = 0;
+  lines = lines.map((line) => {
+    let [, S, T] = line.split(" ");
+    const [hour, minute, millisecond] = S.split(":");
+
+    S = +hour * 60 * 60 * 1000 + +minute * 60 * 1000 + +millisecond * 1000;
+    T = +T.substring(0, T.length - 1) * 1000 - 1;
+    return [S - T, S];
+  });
+
+  for (let i = 0; i < lines.length; i++) {
+    const standardTime = lines[i][1] + 999;
+    let cnt = 1;
+    for (let j = i + 1; j < lines.length; j++) {
+      if (standardTime >= lines[j][0]) cnt++;
+    }
+    answer = Math.max(answer, cnt);
+  }
+
+  return answer;
+}
+```
+
+- 간만에 3단계 문제에 도전했는데 잘 해결해서 기분이 좋았다.
+- 노트에 어떻게 문제를 해결할 지 작성하고, 그대로 코딩을 했다.
+- 우선 받아온 배열을 내 생각대로 사용하기 위해 요청 시간과, 응답 시간으로 파싱해서 저장했다.
+- 밀리세컨드 단위로 포문을 돌리면 어떻게 해도 시간초과가 나기 때문에 요청 시간을 기준으로 코드를 작성하면 될 것이라고 생각해서 문제를 해결했다.
