--- a/_posts/2021-10-12-1011-1017.md
+++ b/_posts/2021-10-12-1011-1017.md
@@ -455,3 +455,57 @@ function solution(lines) {
 - 노트에 어떻게 문제를 해결할 지 작성하고, 그대로 코딩을 했다.
 - 우선 받아온 배열을 내 생각대로 사용하기 위해 요청 시간과, 응답 시간으로 파싱해서 저장했다.
 - 밀리세컨드 단위로 포문을 돌리면 어떻게 해도 시간초과가 나기 때문에 요청 시간을 기준으로 코드를 작성하면 될 것이라고 생각해서 문제를 해결했다.
+
+## 1017
+
+# 일 - 알고리즘
+
+## 프로그래머스 카카오 Level2 - 방금그곡
+
+```javascript
+function solution(m, musicinfos) {
+  let answer = "";
+
+  musicinfos = musicinfos.map((musicinfo) => {
+    let [start, end, title, info] = musicinfo.split(",");
+    let [startHour, startMinute] = start.split(":");
+    start = +startHour * 60 + +startMinute;
+
+    let [endHour, endMinute] = end.split(":");
+    end = +endHour * 60 + +endMinute;
+
+    const playtime = end - start;
+
+    info = info.match(/.#{0,1}/g);
+
+    while (info.length < playtime) {
+      info = [...info, ...info];
+    }
+
+    info = info.slice(0, playtime);
+
+    return [playtime, start, title, info];
+  });
+
+  musicinfos.sort((a, b) =>
+    a[0] > b[0] ? -1 : a[0] < b[0] ? 1 : a[1] > b[1] ? 1 : a[1] < b[1] ? -1 : 0
+  );
+
+  outer: for (let i = 0; i < musicinfos.length; i++) {
+    const arr = m.match(/.#{0,1}/g);
+    for (let j = arr.length; j <= musicinfos[i][3].length; j++) {
+      if (musicinfos[i][3].slice(j - arr.length, j).join("") === m) {
+        answer = musicinfos[i][2];
+        break outer;
+      }
+    }
+  }
+  if (!answer) answer = "(None)";
+  return answer;
+}
+```
+
+- 받아온 문자열을 원하는 정보로 파싱하는 것이 첫 번째 관문이었다. 디스트럭처링 할당을 사용하여 좀 더 가독성있게 작성할 수 있었다.
+- 정렬을 위해서 플레이 타임과, 시작 시간을 분으로 바꿔서 파싱하였다.
+- 정렬을 할 때 항상 헷갈렸었는데, 양수를 반환하면 자리를 바꾸고 음수를 반환하면 자리를 바꾸지 않는다는 것을 확실히 인지하였다.
+- 이 문제에서 막혔던 부분은 음 중에서 `#`이 들어가는 음을 생각하지 못했다는 것이다. 이러한 사소한 문제로 문제가 막힐 수 있음을 인지하였고 코딩테스트 문제를 풀 때 주의해야겠다고 생각했다.
