--- a/_posts/2021-10-20-1018-1024.md
+++ b/_posts/2021-10-20-1018-1024.md
@@ -203,3 +203,71 @@ console.log(solution("AAAAE"));
 - 정말 간단한 문제라고 생각했는데 생각보다 시간이 조금 걸렸다.
 - DFS를 사용하여 수학 계산 중, 부분집합 구하기, 순열 구하기, 중복 순열 구하기, 조합 구하기를 사용할 줄 아는데, 이 중 무엇을 활용할지 헷갈렸다.
 - 사전 상으로 정렬하면 되므로 1개부터 5개까지 모든 중복 순열을 구한 뒤, 정렬하여 답을 찾았다.
+
+## 1021
+
+### 프로그래머스 카카오 Level3 - 보석 쇼핑
+
+```javascript
+function solution(gems) {
+  let answer = [];
+  const sh = new Map();
+  let lt = 0;
+
+  for (const gem of gems) {
+    sh.set(gem, (sh.get(gem) || 0) + 1);
+  }
+  const len = sh.size;
+  sh.clear();
+
+  for (let rt = 0; rt < gems.length; rt++) {
+    sh.set(gems[rt], (sh.get(gems[rt]) || 0) + 1);
+
+    while (sh.size === len) {
+      sh.set(gems[lt], sh.get(gems[lt]) - 1);
+      if (sh.get(gems[lt]) === 0) sh.delete(gems[lt]);
+      answer.push([lt + 1, rt + 1]);
+      lt++;
+    }
+  }
+
+  answer.sort((a, b) =>
+    a[1] - a[0] > b[1] - b[0]
+      ? 1
+      : a[1] - a[0] < b[1] - b[0]
+      ? -1
+      : a[0] > b[0]
+      ? 1
+      : -1
+  );
+
+  return answer[0];
+}
+```
+
+- 카카오 레벨 3단계 문제라 엄청 어려울 것이라고 생각했는데, 생각보다 금방 풀렸다.
+- 투포인터 알고리즘을 사용해서 보석 종류의 개수를 처음에 구하고, map으로 보석을 저장하여 모든 종류의 보석을 가지고 있을 때의 경우를 모두 구해 정렬하여 답을 찾았다.
+
+## 프로그래머스 Level2 - 짝지어 제거하기
+
+```javascript
+function solution(s) {
+  let answer = 1;
+  const nh = [];
+
+  for (let x of s) {
+    if (nh[nh.length - 1] === x) {
+      nh.pop();
+    } else {
+      nh.push(x);
+    }
+  }
+
+  answer = nh.length === 0 ? 1 : 0;
+
+  return answer;
+}
+```
+
+- 다르게 말하면 스택인지 아닌지 찾는 문제인대, 이를 빠르게 알아차리는 것이 핵심인 문제였다.
+- 효율성이 들어가면 당연히 투포인터, 이분탐색 또는 DP까지 생각하게 되는데 이러한 고정관념을 내려놓을 필요도 있다고 느꼈다.
