--- a/_posts/2021-10-20-1018-1024.md
+++ b/_posts/2021-10-20-1018-1024.md
@@ -271,3 +271,22 @@ function solution(s) {
 
 - 다르게 말하면 스택인지 아닌지 찾는 문제인대, 이를 빠르게 알아차리는 것이 핵심인 문제였다.
 - 효율성이 들어가면 당연히 투포인터, 이분탐색 또는 DP까지 생각하게 되는데 이러한 고정관념을 내려놓을 필요도 있다고 느꼈다.
+
+## 1022
+
+## 3일간 미니 프로젝트를 하면 느낀 점
+
+### Canvas API
+
+왜 캔버스를 사용했는지?  
+Canvas API는 JS와 `<canvas>` 엘리먼트를 통해 그래픽을 위한 수단을 제공하는데, 제공되는 메서드를 사용해서 배경 색을 그리거나 이미지를 지정하고, 원하는 텍스트를 삽입하여 다운로드 받기 위해서 캔버스 API를 사용하게 되었다. 캔버스의 크기와 높이, 어떤 폰트 크기와 글꼴로 텍스트를 입력할 지 등의 정보를 상태로 저장하고, 상태가 변경될 때마다 캔버스를 새롭게 그려줬다.
+
+기존에 있던 무료 배너 생성기는 크기 조정이 숫자 값으로 직접 입력해서만 가능했던 데에 비해, 비율을 고정한 채 크기를 조정하는 기능도 있으면 좋겠다고 생각해서 input type range로 크기를 조정하는 기능을 추가했다. 이 기능을 구현할 때 처음에는 onchange라는 이벤트를 사용하면 될 것이라고 생각했다. 하지만 이를 사용하면 화면에 변화가 즉각적으로 발생하는 것이 아니라 마우스를 드래그하고 뗀 후에 이벤트가 발생하는 것을 알 수 있었다. 찾아보니 oninput이라는 이벤트가 있었는데 이는 제가 원하던 대로 값이 즉각적으로 변화되어 화면이 이에 맞게 변화되는 것을 확인할 수 있었다. 여기서 input 사용자가 콘트롤 패널을 통해 데이터를 바꾸는 순간 발동되고, change 이벤트는 value가 정해지면 발동되는 이벤트라는 것을 알게 되었다. 즉 input은 모든 상황에서 change 이벤트보다 먼저 발동된다.
+
+이번에 제가 구현한 가장 재밌었던 파트는 캔버스의 텍스트 멀티 라인을 구현하는 파트였다. 처음에는 엔터를 치면 운영체제 환경에 맞게 라인피드나 캐리지 리턴 등의 이스케이프 문자들이 들어갈 것이라고 생각해서, 이를 `<br>` 태그로 바꿔서 화면에 출력하면 정상 출력되지 않을까 생각했다. 하지만 생각과는 다르게 화면에는 `<br>` 문자열이 그대로 출력되었고, 이유를 찾아보니 캔버스 API의 텍스트를 출력하는 메서드 동작방식이 텍스트와 캔버스 내부에서 텍스트를 표시할 x축 값과 y축 값을 계산하여 화면에 표시해줘야했다. 이때 아.. 이래서 기존 사이트에서 두 줄 이상의 텍스트 출력을 구현하지 않았구나 하는 생각이 들었다. 검색을 해봐도 결과도 거의 없고, 다른 사람의 코드를 가져다 쓰는 것은 적어도 배우는 기간동안은 하고 싶지 않아서 그냥 기존 사이트처럼 한 줄만 출력하게 할까 잠깐 고민을 했다. 하지만 오기가 생겨서 함수를 어떻게 구현할 지 노트에 설계했다. 캔버스의 높이와 텍스트를 라인피드나 캐리지 리턴으로 정규식 처리하여 배열을 구하고, 그 배열의 길이에 상태에 저장하고 있는 폰트사이즈를 곱하면 이 텍스트가 차지해야 하는 높이를 구할 수 있고 그렇다면 첫 번째 줄이 시작해야 하는 y 좌표를 구할 수 있지 않을까 생각했다. 그 결과 생각한대로 맞아떨어졌고 배열을 반복문을 돌려서 원하는 좌표 위치에 텍스트를 출력할 수 있었다. 이렇게 조금 엉성하지만 남의 코드를 참조하거나 베끼지 않고 저의 한계점을 돌파했다고 느낀 이 순간이 프로젝트 중 가장 즐거운 순간이었고, 이 경험을 통해 프로젝트를 시작하기 전보다 개발자로서의 마음가짐 측면에서 성장했다고 느꼈다.
+
+### 하나의 파일로 공동 작업 시 문제점
+
+다른 페이지로 이동 없이 하나의 페이지로만 구성된 애플리케이션을 개발하다 보니 어쩔 수 없이 3명의 팀원이 html, css, js 파일을 공유하여 한 파일에 각자 개발을 진행했다. 그러다보니 각자 기능을 개발하다가 합치는데 오히려 시간이 들어 배보다 배꼽이 큰 현상이 발생했다. 특정 이벤트가 발생할 때마다 하나의 캔버스에 접근하여 상태를 변경시키고 화면을 렌더링 했는데, 개발하다보니 각자 추가로 필요한 상태가 발생했고 이런 상황을 공유하고 해결하면서 프로젝트를 진행하기에 어려움을 겪었다.
+
+편의를 위해서 처음부터 모듈화를 하지 않고 리팩토링 때 모듈화를 해야겠다고 미뤘는데, 소스 파일 내에서 상태를 두고 사용하다 보니 프로젝트가 어느 정도 진행 됐을 때 상태를 참조하거나 세팅하는 코드를 하나하나 찾아내고, 바꾸는 것이 여간 힘든 일이 아니었다. 이번 프로젝트를 통해서 설계의 중요성을 다시금 느꼈고 이를 만족스럽게 하지 못한 데에 아쉬움이 남는다. 또한 협업의 능률을 올리기 위해서는 페이지 별로 작업을 하는 것이 좋겠다고 생각했다.
