--- a/_posts/2021-10-20-1018-1024.md
+++ b/_posts/2021-10-20-1018-1024.md
@@ -290,3 +290,143 @@ Canvas API는 JS와 `<canvas>` 엘리먼트를 통해 그래픽을 위한 수단
 다른 페이지로 이동 없이 하나의 페이지로만 구성된 애플리케이션을 개발하다 보니 어쩔 수 없이 3명의 팀원이 html, css, js 파일을 공유하여 한 파일에 각자 개발을 진행했다. 그러다보니 각자 기능을 개발하다가 합치는데 오히려 시간이 들어 배보다 배꼽이 큰 현상이 발생했다. 특정 이벤트가 발생할 때마다 하나의 캔버스에 접근하여 상태를 변경시키고 화면을 렌더링 했는데, 개발하다보니 각자 추가로 필요한 상태가 발생했고 이런 상황을 공유하고 해결하면서 프로젝트를 진행하기에 어려움을 겪었다.
 
 편의를 위해서 처음부터 모듈화를 하지 않고 리팩토링 때 모듈화를 해야겠다고 미뤘는데, 소스 파일 내에서 상태를 두고 사용하다 보니 프로젝트가 어느 정도 진행 됐을 때 상태를 참조하거나 세팅하는 코드를 하나하나 찾아내고, 바꾸는 것이 여간 힘든 일이 아니었다. 이번 프로젝트를 통해서 설계의 중요성을 다시금 느꼈고 이를 만족스럽게 하지 못한 데에 아쉬움이 남는다. 또한 협업의 능률을 올리기 위해서는 페이지 별로 작업을 하는 것이 좋겠다고 생각했다.
+
+## 1023
+
+# 타이머
+
+## 호출 스케줄링
+
+- 함수를 명시적으로 호출하지 않고 일정 시간이 경과된 이후에 호출되도록 함수 호출을 예약하려면 타이머 함수를 사용한다. 이를 **호출 스케줄링**이라 한다.
+- 타이머 함수는 ECMAScript 사양에 정의된 빌트인 함수가 아니다. 하지만 브라우저 환경과 Node.js 환경에서 모두 전역 객체의 메서드로서 타이머 함수를 제공한다. 즉, 타이머 함수는 호스트 객체다.
+- 타이머 함수는 모두 일정 시간이 경과된 이후 콜백 함수가 호출되도록 타이머를 생성한다.
+- JS 엔진은 단 하나의 실행컨텍스트 스택(콜 스택)을 갖기 때문에 두 가지 태스크를 동시에 실행할 수 없다.
+  -> **싱글 스레드**로 동작
+- 이런 이유로 타이머 함수 setTimeout과 setInterval은 비동기 처리 방식으로 동작한다.
+
+## 타이머 함수
+
+### setTimeout / clearTimeout
+
+setTimeout 함수는 두 번째 인수로 전달받은 시간(ms)으로 단 한 번 동작하는 타이머를 생성한다. 이후 타이머가 만료되면 첫 번째 인수로 전달받은 콜백 함수가 호출된다.  
+-> 즉, setTimeout 함수의 콜백 함수는 두 번째 인수로 전달받은 시간 이후 단 한 번 실행되도록 호출 스케줄링된다.
+
+- 콜백 함수 대신 코드를 문자열로 전달하면 타이머가 만료된 뒤 해석되고 실행되나 권장하지는 않는다.
+- 타이머 만료 시간을 생략할 경우 기본값 0이 지정된다.
+- delay 시간은 태스크 큐에 콜백 함수를 등록하는 시간을 지연할 뿐이다. 타이머가 만료되면 콜백 함수가 즉시 호출되는 것이 보장되지는 않는다.
+- delay가 4ms 이하인 경우 최소 지연 시간 4ms가 지정된다.
+- 호출 스케줄링된 콜백 함수에 전달해야 할 인수가 존재하는 경우 세 번째 이후의 인수로 전달할 수 있다.
+- setTimeout 함수는 생성된 타이머를 식별할 수 있는 고유한 타이머 id를 반환한다. 브라우저 환경인 경우 숫자를 반환하고, Node.js 환경인 경우 객체를 반환한다.
+- setTimeout 함수가 반환한 타이머 id를 clearTimeout 함수의 인수로 전달하여 타이머를 취소할 수 있다.
+  - clearTimeout 함수는 호출 스케줄링을 취소한다.
+
+```javascript
+const timerId = setTimeout(() => console.log("Hi!"), 1000);
+// setTimeout 함수가 반환한 타이머 id를 clearTimeout 함수의 인수로 전달하여 타이머를 취소한다.
+// 타이머가 취소되면 setTimeout 함수의 콜백 함수가 실행되지 않는다.
+clearTimeout(timerId);
+```
+
+### setInterval / clearInterval
+
+- setInterval 함수는 두 번째 인수로 전달받은 시간으로 반복 동작하는 타이머를 생성한다.
+- 타이머가 만료될 때마다 첫 번째 인수로 전달받은 콜백 함수가 반복 호출된다.
+  - 타이머가 취소될 때까지 계속된다.
+- clearInterval 함수로 setInterval 함수가 반환한 타이머 id를 전달하여 타이머를 취소할 수 있다.
+
+## 디바운스와 스로틀
+
+- scroll, resize, input, mouse move 같은 이벤트는 짧은 시간 간격으로 연속해서 발생하기 때문에 이러한 이벤트에 바인딩한 이벤트 핸들러는 과도하게 호출되어 성능에 문제를 일으킬 수 있다.
+- 디바운스와 스로틀은 짧은 시간 간격으로 연속해서 발생하는 이벤트를 그룹화해서 과도한 이벤트 핸들러의 호출을 방지하는 프로그래밍 기법이다.
+
+### 디바운스
+
+- 디바운스는 짧은 시간 간격으로 이벤트가 연속해서 발생하면 이벤트 핸들러를 호출하지 않다가 일정한 시간이 경과한 이후에 한 번만 호출되도록 한다.
+- 즉, 짧은 시간 간격으로 발생하는 이벤트를 그룹화해서 마지막에 한 번만 이벤트 핸들러가 호출되도록 한다.
+- 예를 들어 Ajax 요청 같은 무거운 처리를 수행한다면, 사용자가 입력을 완료했을 때 한 번만 Ajax 요청을 전송하는 것이 바람직하다.
+
+```javascript
+const debounce = (callback, delay) => {
+  let timerId;
+
+  return (event) => {
+    if (timerId) clearInterval(timerId);
+    timerId = setTimeout(callback, delay, event);
+  };
+};
+```
+
+- debounce 함수는 timerId를 기억하는 클로저를 반환한다.
+- delay가 경과하기 이전에 이벤트가 발생하면 이전 타이머를 취소하고 새로운 타이머를 재설정한다.
+- 따라서 delay보다 짧은 간격으로 이벤트가 발생하면 callback은 호출되지 않는다.
+- resize 이벤트 처리나 input 요소에 입력된 값으로 ajax 요청하는 입력 필드 자동완성 UI 구현, 버튼 중복 클릭 방지 처리등에 유용하게 사용된다.
+
+### 스로틀
+
+- 스로틀은 짧은 시간 간격으로 이벤트가 연속해서 발생하더라도 일정 시간 간격으로 이벤트 핸들러가 최대 한 번만 호출되도록 한다.
+- 즉, 스로틀은 짧은 시간 간격으로 연속해서 발생하는 이벤트를 그룹화해서 일정 시간 단위로 이벤트 핸들러가 호출되도록 호출 주기를 만든다.
+- delay가 경과하기 이전에 이벤트가 발생하면 아무것도 하지 않다가 delay 시간이 경과했을 때 이벤트가 발생하면 콜백 함수를 호출하고 새로운 타이머를 재설정한다.
+- 따라서 delay 시간 간격으로 콜백 함수가 호출된다.
+- scroll 이벤트 처리나 무한 스크롤 UI 구현 등에 유용하게 사용된다.
+
+```javascript
+const throttle = (callback, delay) => {
+  let timerId;
+
+  return (event) => {
+    if (timerId) return;
+    timerId = setTimeout(
+      () => {
+        callback(event);
+        timer = null;
+      },
+      delay,
+      event
+    );
+  };
+};
+```
+
+# 비동기 프로그래밍
+
+## 동기 처리와 비동기 처리
+
+- 실행 컨텍스트 스택에 함수 실행 컨텍스트가 푸시되는 것은 바로 함수 실행의 시작을 의미한다.
+- 함수가 호출된 순서대로 순차적으로 실행되는 이유는 함수가 호출된 순서대로 함수 실행 컨텍스트가 실행 컨텍스트 스택에 푸시되기 때문이다.
+- JS 엔진은 단 하나의 실행 컨텍스트 스택을 갖기에 함수를 실행할 수 있는 창구가 단 하나이며, 동시에 2개 이상의 함수를 실행할 수 없다.
+- 이처럼 자바스크립트 엔진은 한 번에 단 하나의 태스크만 실행할 수 있는 싱글 스레드 방식으로 동작한다.
+- 싱글 스레드 방식은 한 번에 하나의 태스크만 실행할 수 있기 때문에 처리에 시간이 걸리는 태스크를 실행하는 경우 블로킹(작업 중단)이 발생한다.
+- 이처럼 현재 실행 중인 태스크가 종료할 때까지 다음에 실행될 태스크가 대기하는 방식을 **동기 처리**라고 한다.
+- 동기 처리 방식은 태스크가 순서대로 하나씩 처리하므로 실행 순서가 보장된다는 장점이 있지만, 앞선 태스크가 종료할 때까지 이후 태스크들이 블로킹되는 단점이 있다.
+
+- setTimeout 함수는 일정 시간이 경과한 이후에 콜백 함수를 호출하지만 setTimeout 함수 이후의 태스크를 블로킹하지 않고 곧바로 실행한다.
+- 이처럼 현재 실행 중인 태스크가 종료되지 않은 상태라 해도 다음 태스크를 곧바로 실행하는 방식을 **비동기 처리**라고 한다.
+- 비동기 처리 방식은 현재 실행 중인 태스크가 종료되지 않은 상태라 해도 다음 태스크를 곧바로 실행하므로 블로킹이 발생하지 않는다는 장점이 있지만, 태스크의 순서가 보장되지 않는 단점이 있다.
+- 비동기 함수는 전통적으로 콜백 패턴을 사용한다. 이러한 패턴은 콜백 헬을 발생시켜 가독성을 나쁘게 하고, 비동기 처리 중 발생한 에러의 예외 처리가 곤란하며, 여러 개의 비동기 처리를 한 번에 처리하는 데도 한계가 있다.
+- 타이머 함수인 setTimeout과 setInterval, HTTP 요청, 이벤트 핸들러는 비동기 처리 방식으로 동작한다.
+
+## 이벤트 루프와 태스크 큐
+
+자바스크립트의 특징 중 하나는 싱글 스레드로 동작하여 한 번에 하나의 태스크만 처리할 수 있다. 하지만 브라우저가 동작하는 것을 살펴보면 많은 태스크가 동시에 처리되는 것처럼 느껴진다.
+
+- 이처럼 자바스크립트의 동시성을 지원하는 것이 바로 이벤트 루프다.
+  - 이벤트 루프는 브라우저에 내장되어 있는 기능 중 하나다.
+- V8 JS 엔진을 비롯한 대부분의 JS 엔진은 크게 2개의 영역으로 구분할 수 있다.
+  - 콜스택
+    - 실행 컨텍스트 스택이 바로 콜 스택이다.
+    - JS 엔진은 하나의 콜 스택을 사용하기 때문에 최상위 실행 컨텍스트가 종료되어 콜 스택에서 제거되기 전까지는 다른 어떤 태스크도 실행되지 않는다.
+  - 힙
+    - 힙은 객체가 저장되는 메모리 공간이다. 콜 스택 요소인 실행 컨텍스트는 힙에 저장된 객체를 참조한다.
+    - 객체는 원시 값과는 달리 크기가 정해져 있지 않아 할당해야 할 메모리 공간의 크기를 런타임에 결정해야 한다.
+    - 따라서 객체가 저장되는 힙은 구조화되어 있지 않다는 특징이 있다.
+- 이처럼 콜 스택과 힙으로 구성되어 있는 JS 엔진은 단순히 태스크가 요청되면 콜 스택을 통해 요청된 작업을 순차적으로 실행할 뿐이다.
+- 비동기 처리에서 소스코드의 평가와 실행을 제외한 모든 처리는 브라우저 또는 Node.js가 담당한다.
+  - 태스크 큐
+    - setTimeout이나 setInterval 같은 비동기 함수의 콜백 함수 또는 이벤트 핸들러가 일시적으로 보관되는 영역
+    - 태스크 큐와는 별도로 프로미스의 후속 처리 메서드의 콜백 함수가 일시적으로 보관되는 마이크로태스크 큐도 존재한다.
+  -     이벤트 루프
+    - 콜 스택에 현재 실행 중인 실행 컨텍스트가 있는지, 그리고 태스크 큐에 대기 중인 함수(콜백 함수, 이벤트 핸들러 등)가 있는지 반복해서 확인한다.
+    - 만약 콜 스택이 비어 있고 태스크 큐에 대기 중인 함수가 있다면 이벤트 루프는 순차적으로 태스크 큐에 대기 중인 함수를 콜 스택으로 이동시킨다.
+- 비동기 함수인 setTimeout의 콜백 함수는 태스크 큐에 푸시되어 대기하다가 콜 스택이 비게 되면, 다시 말해 전역 코드 및 명시적으로 호출된 함수가 모두 종료하면 비로소 콜 스택에 푸시되어 실행된다.
+- 싱글 스레드 방식으로 동작하는 것은 브라우저가 아니라 브라우저에 내장된 JS 엔진이라는 것에 주의하자. 만약 모든 JS 코드가 자바스크립트 엔진에서 싱글 스레드 방식으로 동작하면 자바스크립트는 비동기로 동작할 수 없다.
+  - 즉, 자바스크립트 엔진은 싱글 스레드로 동작하지만 브라우저는 멀티 스레드로 동작한다.
