--- a/_posts/2021-10-20-1018-1024.md
+++ b/_posts/2021-10-20-1018-1024.md
@@ -430,3 +430,104 @@ const throttle = (callback, delay) => {
 - 비동기 함수인 setTimeout의 콜백 함수는 태스크 큐에 푸시되어 대기하다가 콜 스택이 비게 되면, 다시 말해 전역 코드 및 명시적으로 호출된 함수가 모두 종료하면 비로소 콜 스택에 푸시되어 실행된다.
 - 싱글 스레드 방식으로 동작하는 것은 브라우저가 아니라 브라우저에 내장된 JS 엔진이라는 것에 주의하자. 만약 모든 JS 코드가 자바스크립트 엔진에서 싱글 스레드 방식으로 동작하면 자바스크립트는 비동기로 동작할 수 없다.
   - 즉, 자바스크립트 엔진은 싱글 스레드로 동작하지만 브라우저는 멀티 스레드로 동작한다.
+
+## 1024
+
+# 일 - 알고리즘
+
+## 프로그래머스 Level2 - 삼각 달팽이
+
+```javascript
+function solution(n) {
+  const answer = Array.from({ length: n }, (_, i) => Array(i + 1).fill(0));
+  let value = 1;
+  let mode = 1;
+  let i = 0;
+  let j = 0;
+
+  for (let cnt = n; cnt > 0; cnt--) {
+    if (mode === 1) {
+      for (let k = 0; k < cnt; k++) {
+        answer[i++][j] = value++;
+      }
+      i--;
+      j++;
+      mode = 2;
+    } else if (mode === 2) {
+      for (let k = 0; k < cnt; k++) {
+        answer[i][j++] = value++;
+      }
+      j--;
+      mode = 3;
+    } else {
+      for (let k = 0; k < cnt; k++) {
+        answer[--i][--j] = value++;
+      }
+      i++;
+      mode = 1;
+    }
+  }
+  return answer.flat();
+}
+```
+
+- 최근에는 구현 위주 문제들로 문제풀이를 진행하고 있다.
+- 한 줄씩 이동할 때마다 이동하는 거리가 줄어든다는 규칙성을 발견하고 이를 이용하여 위에서 아래로 내려오는 경우, 왼쪽에서 오른쪽으로 가는 경우, 아래에서 위로 가는 경우 세 모드로 나눠서 코드를 구현했다.
+
+## 프로그래머스 Level2 - 행렬 테두리 회전하기
+
+```javascript
+function solution(rows, columns, queries) {
+  let answer = [];
+  const arr = Array.from(Array(rows + 1), () => Array(columns + 1).fill(0));
+
+  for (let i = 0; i <= rows; i++) {
+    for (let j = 0; j <= columns; j++) {
+      arr[i][j] = (i - 1) * columns + j;
+    }
+  }
+
+  for (const query of queries) {
+    let min = Number.MAX_SAFE_INTEGER;
+    const [x1, y1, x2, y2] = query;
+    const [xy1, xy2, xy3, xy4] = [
+      arr[x1][y1],
+      arr[x1][y2],
+      arr[x2][y2],
+      arr[x2][y1],
+    ];
+
+    for (let j = y2; j > y1; j--) {
+      arr[x1][j] = arr[x1][j - 1];
+      min = Math.min(min, arr[x1][j - 1]);
+    }
+
+    for (let i = x2; i > x1; i--) {
+      arr[i][y2] = arr[i - 1][y2];
+      min = Math.min(min, arr[i - 1][y2]);
+    }
+
+    for (let j = y1; j < y2; j++) {
+      arr[x2][j] = arr[x2][j + 1];
+      min = Math.min(min, arr[x2][j + 1]);
+    }
+
+    for (let i = x1; i < x2; i++) {
+      arr[i][y1] = arr[i + 1][y1];
+      min = Math.min(min, arr[i + 1][y1]);
+    }
+
+    arr[x1 + 1][y2] = xy2;
+    arr[x2][y2 - 1] = xy3;
+    arr[x2 - 1][y1] = xy4;
+    min = Math.min(min, ...[xy2, xy3, xy4]);
+
+    answer.push(min);
+  }
+
+  return answer;
+}
+```
+
+- 구현 문제들을 어려운 문제들도 하나씩 풀어감에 따라 자신감이 점점 오르는걸 느낀다.
+- 네 방향으로 이동하는 것을 꼭짓점의 좌표를 이용해서 구현하였다.
