--- a/_posts/2021-10-26-1025-1031.md
+++ b/_posts/2021-10-26-1025-1031.md
@@ -109,3 +109,287 @@ function solution(expression) {
 - 생각보다 어려운 문제라고 느낀 구현 문제였다.
 - 푸는 것 자체는 어렵지 않았는데, 구현이 생각보다 어려웠다.
 - DFS로 연산자 조합을 모두 구하고, 해당 연산자 조합으로 반복문을 돌려서 절대값이 가장 큰 수를 구했다.
+
+## 1026
+
+# 45장 프로미스
+
+자바스크립트는 비동기 처리를 위한 하나의 패턴으로 콜백 함수를 사용한다.  
+전통적인 콜백 패턴은 콜백 헬로 인해 가독성이 나쁘고 비동기 처리 중 발생한 에러의 처리가 곤란하며 여러 개의 비동기 처리를 한 번에 처리하는 데도 한계가 있다.  
+-> 프로미스는 비동기 처리를 위한 또 다른 패턴이다. 콜백 패턴이 가진 단점을 보완하며 비동기 처리 시점을 명확하게 표현할 수 있다는 장점이 있다.
+
+## 비동기 처리를 위한 콜백 패턴의 단점
+
+### 콜백 헬
+
+- 비동기 함수를 호출하면 함수 내부의 비동기로 동작하는 코드가 완료되지 않았다 해도 기다리지 않고 즉시 종료된다.
+- 즉, 비동기 함수 내부의 비동기로 동작하는 코드는 비동기 함수가 종료된 이후에 완료된다.
+- 따라서 비동기 함수 내부의 비동기로 동작하는 코드에서 처리 결과를 외부로 반환하거나 상위 스코프의 변수에 할당하면 기대한 대로 동작하지 않는다.
+
+- 서버로부터 응답이 도착하면 xhr 객체에서 load 이벤트가 발생한다.
+- 이때 xhr.onload 핸들러 프로퍼티에 바인딩한 이벤트 핸들러가 즉시 실행하는 것이 아니라 load 이벤트가 발생하면 일단 태스크 큐에 저장되어 대기하다가, 콜 스택이 비면 이벤트 루프에 의해 콜 스택으로 푸시되어 실행된다.
+- 이처럼 비동기 함수는 비동기 처리 결과를 외부에 반환할 수 없고, 상위 스코프의 변수에 할당할 수도 없다.
+- 따라서 바동기 함수의 처리 결과에 대한 후속 처리는 비동기 함수 내부에서 수행해야 한다.
+- 이때 비동기 함수를 범용적으로 사용하기 위해 처리 결과에 대한 후속 처리를 수행하는 콜백 함수를 전달하는 것이 일반적이다.
+- 콜백 함수를 통해 비동기 처리 결과에 대한 후속 처리를 수행하는 비동기 함수가 비동기 처리 결과를 가지고 또다시 비동기 함수를 호출해야 한다면 콜백 함수 호출이 중첩되어 복잡도가 높아지는 현상이 발생한다.
+  -> 콜백 헬
+
+### 에러 처리의 한계
+
+비동기 처리를 위한 콜백 패턴의 문제점 중에서 가장 심각한 것은 에러 처리가 곤란하다는 것이다.
+
+```javascript
+try {
+  setTimeout(() => {
+    throw new Error("Error!");
+  }, 1000);
+} catch (e) {
+  console.error("캐치한 에러", e);
+}
+```
+
+- 위의 예제에서 콜백함수는 에러를 발생시키지만 catch 코드 블록에서 캐치되지 않는다.
+- setTimeout의 콜백 함수가 실행될 때 setTimeout 함수는 이미 콜 스택에서 제거된 상태다.
+- 이것은 setTimeout의 콜백 함수의 호출자(caller)가 setTimeout 함수가 아니라는 것을 의미한다.
+- 에러는 호출자 방향으로 전파된다. 즉, 콜 스택의 아래 방향으로 전파된다.
+- 따라서 setTimeout 함수의 콜백 함수가 발생시킨 에러는 catch 블록에서 캐치되지 않는다.
+  -> 이러한 문제점들을 해결하기 위해 ES6에서 프로미스가 도입되었다.
+
+## 프로미스의 생성
+
+- Promise 생성자 함수를 new 연산자와 함께 호출하면 프로미스 객체를 생성한다.
+- 프로미스는 호스트 객체가 아닌 ECMAScript 사양에 정의된 표준 빌트인 객체다.
+- Promise 생성자 함수는 비동기 처리를 수행할 콜백 함수를 인수로 전달받는데 이 콜백 함수는 resolve와 reject 함수를 인수로 전달받는다.
+- Promise 생성자 함수가 인수로 전달받은 콜백 함수 내부에서 비동기 처리를 수행한다. 이때 비동기 처리가 성공하면 콜백 함수의 인수로 전달받은 resolve 함수를 호출하고, 비동기 처리가 실패하면 reject 함수를 호출한다.
+
+```javascript
+const promiseGet = (url) => {
+  return Promise((resolve, reject) => {
+    const xhr = new XMLHttpRequest();
+    xhr.open("GET", url);
+    xhr.send();
+
+    xhr.onload = () => {
+      if (xhr.status === 200) {
+        resolve(JSON.parse(xhr.response));
+      } else {
+        reject(new Error(xhr.status));
+      }
+    };
+  });
+};
+
+promiseGet("url");
+```
+
+- 비동기 함수인 promiseGet은 함수 내부에서 프로미스를 생성하고 반환한다. 비동기 처리는 Promise 생성자 함수가 인수로 전달받은 콜백 함수 내부에서 수행한다.
+- 비동기 처리가 성공하면 비동기 처리 결과를 resolve 함수에 인수로 전달하면서 호출하고, 실패하면 에러를 reject 함수에 인수로 전달하면서 호출한다.
+
+### 프로미스 상태 정보
+
+프로미스는 현재 비동기 처리가 어떻게 진행되고 있는지 나타내는 상태 정보를 갖는다.
+
+- 생성된 직후의 프로미스는 기본적으로 pending 상태이다. 비동기 처리가 수행되면 비동기 처리 결과에 따라 프로미스 상태가 변경된다.
+- 프로미스의 상태는 resolve 또는 reject 함수를 호출하는 것으로 결정된다.
+- fulfilled 또는 rejected 상태를 settled 상태라고 한다. settled 상태는 pending이 아닌 비동기 처리가 수행된 상태를 말한다.
+- 프로미스는 pending 상태에서 settled 상태로 변화할 수 있지만, settled 상태가 되면 다른 상태로 변화할 수 없다.
+- 프로미스는 비동기 처리 상태와 더불어 비동기 처리 결과도 상태로 갖는다.
+  즉, **프로미스는 비동기 처리 상태와 처리 결과를 관리하는 객체다.**
+
+## 프로미스의 후속 처리 메서드
+
+- 프로미스의 비동기 처리 상태가 변화하면 이에 따른 후속 처리를 해야한다.
+  - 예를 들어, 프로미스가 fulfilled 상태가 되면 프로미스의 처리 결과를 가지고 무언가를 해야 하고, 프로미스가 rejected 상태가 되면 프로미스의 처리 결과(에러)를 가지고 에러 처리를 해야한다.
+- 프로미스의 비동기 처리 상태가 변화하면 후속 처리 메서드에 인수로 전달한 콜백 함수가 선택적으로 호출된다.
+- 후속 처리 메서드의 콜백 함수에 프로미스의 처리 결과가 인수로 전달된다.
+- 모든 후속 처리 메서드는 프로미스를 반환하며, 비동기로 동작한다.
+  - 만약 후속 처리 메서드의 콜백 함수가 프로미스가 아닌 값을 반환하면 그 값을 암묵적으로 resolve 또는 reject하여 프로미스를 생성해 반환한다.
+
+### Promise.prototype.then
+
+then 메서드는 두 개의 콜백 함수를 인수로 전달받는다.  
+첫 번째 콜백 함수는 비동기 처리가 성공했을 때 호출되는 성공 처리 콜백 함수이며, 두 번째 콜백 함수는 비동기 처리가 실패했을 때 호출되는 실패 처리 콜백 함수다.
+
+```javascript
+// fulfilled
+new Promise((resolve) => resolve("fulfilled")).then(
+  (v) => console.log(v),
+  (e) => console.error(e)
+); // fulfilled
+
+// rejected
+new Promise((_, reject) => reject(new Error("rejected"))).then(
+  (v) => console.log(v),
+  (e) => console.error(e)
+); // Error: rejected
+```
+
+### Promise.prototype.catch
+
+catch 메서드는 한 개의 콜백 함수를 인수로 전달받는다. catch 메서드의 콜백 함수는 프로미스가 rejected 상태인 경우만 호출된다.
+
+```javascript
+// rejected
+new Promise((_, reject) => reject(new Error("rejected"))).catch((e) =>
+  console.log(e)
+); // Error: reject
+```
+
+### Promise.prototype.finally
+
+finally 메서드는 한 개의 콜백 함수를 인수로 전달받는다. finally 메서드의 콜백 함수는 프로미스의 성공 실패와 상관없이 무조건 한 번 호출된다. 프로미스의 상태와 상관없이 공통적으로 수행해야 할 처리 내용이 있을 때 유용하다.
+
+```javascript
+new Promise(() => {}).finally(() => console.log("finally")); // finally
+```
+
+## 프로미스의 에러 처리
+
+- 비동기 처리를 위한 콜백 패턴은 에러 처리가 곤란하다는 문제가 있다. 프로미스는 에러를 문제없이 처리할 수 있다.
+- 비동기 처리에서 발생한 에러는 then 메서드의 두 번째 콜백 함수나 catch를 사용해 처리할 수 있다.
+- catch 메서드를 호출하면 내부적으로 then(undefined, catch 콜백함수)을 호출한다.
+- then의 두 번째 콜백 함수는 첫 번째 콜백 함수에서 발생한 에러를 캐치하지 못하고 코드가 복잡해져서 가독성이 좋지 않다.
+- 모든 then 메서드를 호출한 이후에 catch 메서드를 사용하면 then 메서드 내부에서 발생한 에러까지 모두 캐치할 수 있고 가독성이 좋고 명확하다.
+
+## 프로미스 체이닝
+
+```javascript
+const url = "https://jsonplaceholder.typicode.com";
+
+// id가 1인 post의 userId를 취득
+promiseGet(`${url}/posts/1`)
+  // 취득한 post의 userId로 user 정보를 취득
+  .then(({ userId }) => promiseGet(`${url}/users/${userId}`))
+  .then((userInfo) => console.log(userInfo))
+  .catch((err) => console.error(err));
+```
+
+- then, catch, finally 후속 처리 메서드는 언제나 프로미스를 반환하므로 연속적으로 호출할 수 있다. 이를 프로미스 체이닝이라 한다.
+- 프로미스는 프로미스 체이닝을 통해 비동기 처리 결과를 전달받아 후속 처리를 하므로 비동기 처리를 위한 콜백 패턴에서 발생하던 콜백 헬이 발생하지 않는다. 다만 프로미스도 콜백 패턴을 사용하므로 콜백 함수를 사용하지 않는 것은 아니다.
+
+## 프로미스의 정적 메서드
+
+Promise는 주로 생성자 함수로 사용되지만 함수도 객체이므로 메서드를 가질 수 있다. Promise는 5가지 정적 메서드를 제공한다.
+
+### Promise.resolve / Promise.reject
+
+두 메서드는 이미 존재하는 값을 래핑하여 프로미스를 생성하기 위해 사용한다.
+
+Promise.resolve 메서드는 인수로 전달받은 값을 resolve하는 프로미스를 생성한다.
+
+```javascript
+const resolvedPromise = Promise.resolve([1, 2, 3]);
+resolvedPromise.then((e) => console.log(e));
+
+// 다음과 같이 동작한다.
+const resolvedPromise = new Promise((resolve) => resolve([1, 2, 3]));
+resolvedPromise.then(console.log); // [1, 2, 3]
+```
+
+Promise.reject 메서드는 인수로 전달받은 값을 reject하는 프로미스를 생성한다.
+
+### Promise.all
+
+Promise.all 메서드는 여러 개의 비동기 처리를 모두 병렬 처리할 때 사용한다.
+
+- 여러 개의 비동기 처리가 서로 의존하지 않고 개별적으로 수행되는 경우. 즉, 앞선 비동기 처리 결과를 다음 비동기 처리가 사용하지 않는 경우 세 개의 비동기 처리를 순차적으로 처리할 필요가 없다.
+
+```javascript
+const requestData1 = () =>
+  new Promise((resolve) => setTimeout(() => resolve(1), 3000));
+const requestData2 = () =>
+  new Promise((resolve) => setTimeout(() => resolve(2), 2000));
+const requestData3 = () =>
+  new Promise((resolve) => setTimeout(() => resolve(3), 1000));
+
+Promise.all([requestData1(), requestData2(), requestData3()])
+  .then(console.log)
+  .catch(console.error);
+```
+
+- Promise.all 메서드는 프로미스를 요소로 갖는 배열 등의 이터러블을 인수로 전달받는다. 그리고 전달받은 모든 프로미스가 fulfilled 상태가 되면 모든 처리 결과를 배열에 저장해 새로운 프로미스를 반환한다.
+- Promise.all 메서드는 인수로 전달받은 배열의 모든 프로미스가 모두 fulfilled 상태가 되면 종료한다. 따라서 Promise.all 메서드가 종료하는 데 걸리는 시간은 가장 늦게 fulfilled 상태가 되는 프로미스의 처리 시간보다 조금 더 길다.
+- 첫 번째 프로미스가 resolve한 처리 결과부터 차례대로 배열에 저장해 그 배열을 resolve하는 새로운 프로미스를 반환한다. 즉, 처리 순서가 보장된다.
+- 인수로 전달받은 배열의 프로미스가 하나라도 rejected 상태가 되면 나머지 프로미스가 fulfilled 상태가 되는 것을 기다리지 않고 즉시 종료한다.
+- 인수로 전달받은 이터러블의 요소가 프로미스가 아닌 경우 Promise.resolve 메서드를 통해 프로미스로 래핑한다.
+
+### Promise.race
+
+- Promise.race 메서드는 프로미스를 요소로 갖는 배열 등의 이터러블을 인수로 전달받는다.
+- Promise.all 처럼 모든 프로미스가 fulfilled 상태가 되는 것을 기다리는 것이 아니라 가장 먼저 fulfilled 상태가 된 프로미스의 처리 결과를 resolve하는 새로운 프로미스를 반환한다.
+- 프로미스가 rejected 상태가 되면 에러를 reject하는 새로운 프로미스를 즉시 반환한다.
+
+### Promise.allSettled
+
+- Promise.allSettled 메서드는 프로미스를 요소로 갖는 배열 등의 이터러블을 인수로 전달받는다.
+- 전달받은 프로미스가 모두 settled 상태(비동기 처리가 수행된 상태)가 되면 처리 결과를 배열로 반환한다.
+- Promise.allSettled 메서드가 반환한 배열에는 상태와는 상관없이 인수로 전달받은 모든 프로미스들의 처리 결과가 모두 담겨있다.
+  - fulfilled 상태인 경우 비동기 처리 상태를 나타내는 status 프로퍼티와 처리 결과를 나타내는 value 프로퍼티를 갖는다.
+  - rejected 상태인 경우 비동기 처리 상태를 나타내는 status 프로퍼티와 에러를 나타내는 reason 프로퍼티를 갖는다.
+
+```javascript
+[
+  // 프로미스가 fulfilled 상태인 경우
+  {status: "fulfilled", value: 1},
+  // 프로미스가 rejected 상태인 경우
+  {status: "rejected", reason: Error: Error! at <anonymous>:3:60}
+]
+```
+
+## 마이크로태스크 큐
+
+```javascript
+setTimeout(() => console.log(1), 0);
+
+Promise.resolve()
+  .then(() => console.log(2))
+  .then(() => console.log(3));
+```
+
+- 프로미스의 후속 처리 메서드도 비동기로 동작하므로 1 -> 2 -> 3 순으로 출력될 것처럼 보이지만 2 -> 3 -> 1 순으로 출력된다.
+- 그 이유는 프로미스의 후속 처리 메서드의 콜백 함수는 태스크 큐가 아니라 마이크로태스크 큐에 저장되기 때문이다.
+- 마이크로태스크 큐에는 프로미스의 후속 처리 메서드의 콜백 함수가 일시 저장된다.
+- 그 외의 비동기 함수의 콜백 함수나 이벤트 핸들러는 태스크 큐에 일시 저장된다.
+- **마이크로태스크 큐는 태스크 큐보다 우선순위가 높다.**
+- 즉, 이벤트 루프는 콜 스택이 비면 먼저 마이크로태스크 큐에서 대기하고 있는 함수를 가져와 실행한다. 이후 마이크로태스크 큐가 비면 태스크 큐에서 대기하고 있는 함수를 가져와 실행한다.
+
+## fetch
+
+- fetch 함수는 XMLHttpRequest 객체와 마찬가지로 HTTP 요청 전송 기능을 제공하는 클라이언트 사이드 Web API이다.
+- XMLHttpRequest 객체보다 사용법이 간단하고 프로미스를 지원하기 때문에 비동기 처리를 위한 콜백 패턴의 단점에서 자유롭다.
+- fetch 함수에는 HTTP 요청을 전송할 URL과 HTTP 요청 메서드, HTTP 요청 헤더, 페이로드 등을 설정한 객체를 전달한다.
+- fetch 함수는 HTTP 응답을 나타내는 Response 객체를 래핑한 Promise 객체를 반환한다.
+  - 그렇기 때문에 후속 처리 메서드 then을 통해 프로미스가 resolve한 Response 객체를 전달받을 수 있다.
+  - Response.prototype에는 Response 객체에 포함되어 있는 HTTP 응답 몸체를 위한 다양한 메서드를 제공한다.
+  - 예를 들어, 반환한 프로미스가 래핑하고 있는 MIME 타입이 application/json인 HTTP 응답 몸체를 취득하려면 Response.prototype.json 메서드를 사용한다.
+  - 이 메서드는 response body를 취득하여 역직렬화한다.
+- fetch 함수에 첫 번째 인수로 HTTP 요청을 전송할 URL과 두 번째 인수로 HTTP 요청 메서드, HTTP 요청 헤더, 페이로드 등을 설정한 객체를 전달한다.
+
+```javascript
+const request = {
+  get(url) {
+    return fetch(url);
+  },
+  post(url, payload) {
+    return fetch(url, {
+      method: "POST",
+      headers: { "content-Type": "application/json" },
+      body: JSON.stringify(payload),
+    });
+  },
+  patch(url, payload) {
+    return fetch(url, {
+      method: "PATCH",
+      headers: { "content-Type": "application/json" },
+      body: JSON.stringify(payload),
+    });
+  },
+  delete(url) {
+    return fetch(url, { method: "DELETE" });
+  },
+};
+```
+
+### 출처
+
+모던 자바스크립트 Deep Dive
