--- a/_posts/2021-10-26-1025-1031.md
+++ b/_posts/2021-10-26-1025-1031.md
@@ -393,3 +393,68 @@ const request = {
 ### 출처
 
 모던 자바스크립트 Deep Dive
+
+## 1027
+
+# 78일 차
+
+알고리즘 시험을 대비해서 리트코드 문제를 풀어봤다.  
+처음 겪는 듯한 스타일에 적지 않게 당황했고, 쉽지 않다는 생각이 들었다.  
+프로그래머스는 어느정도 문제를 풀어봤으니 이제 리트코드를 열심히 풀어야겠다고 생각했다.
+
+## Two Sum
+
+```javascript
+var twoSum = function (nums, target) {
+  for (let i = 0; i < nums.length; i++) {
+    for (let j = 0; j < nums.length; j++) {
+      if (i === j) continue;
+      if (nums[i] + nums[j] === target) return [i, j];
+    }
+  }
+};
+```
+
+- 리트코드 문제에는 투포인터나 DP 스타일의 문제들이 다양했다.
+- 처음에는 영어 문제가 해석이 잘 안돼서 고생 좀 했다.
+- 이 문제는 시간복잡도를 크게 중요시 하는 문제는 아니라서 쉽게 해결했다.
+
+## Three Sum
+
+```javascript
+var threeSum = function (nums) {
+  let answer = [];
+  nums.sort((a, b) => a - b);
+
+  for (let i = 0; i < nums.length; i++) {
+    if (nums[i] === nums[i - 1]) continue;
+    let lt = i + 1;
+    let rt = nums.length - 1;
+    while (lt < rt) {
+      if (lt === i) lt++;
+      if (rt === i) rt--;
+      let sum = nums[i] + nums[lt] + nums[rt];
+
+      if (sum === 0) {
+        while (nums[lt] === nums[lt + 1]) lt++;
+        while (nums[rt] === nums[rt - 1]) rt--;
+        answer.push([nums[i], nums[lt], nums[rt]]);
+        lt++;
+        rt--;
+      } else if (sum < 0) {
+        lt++;
+      } else {
+        rt--;
+      }
+    }
+  }
+
+  return answer;
+};
+```
+
+- 이 문제에서 살짝 좌절감을 느꼈었는데, 처음에는 해시로 접근했다가 포함하는 요소가 같은 경우를 어떻게 처리해 줄지 고민했었다.
+- 찾아보니 투포인터로 문제를 해결하는 좋은 방법이 있었다.
+- 우선 이 방법을 사용하기 위해서는 오름차순으로 정렬을 했다.
+- for 문을 한 번만 돌리면서 그 내부에서 lt와 rt를 정하고 세 인덱스에 위치한 값을 더해 값이 0보다 큰지와 0보다 작은지로 나누어서 lt와 rt를 조정해주었다.
+- lt와 rt 중 계속해서 동일한 값이 반복되는 경우를 방지하기 위해 같은 경우 인덱스를 조절해줬다.
