--- a/_posts/2021-10-26-1025-1031.md
+++ b/_posts/2021-10-26-1025-1031.md
@@ -458,3 +458,152 @@ var threeSum = function (nums) {
 - 우선 이 방법을 사용하기 위해서는 오름차순으로 정렬을 했다.
 - for 문을 한 번만 돌리면서 그 내부에서 lt와 rt를 정하고 세 인덱스에 위치한 값을 더해 값이 0보다 큰지와 0보다 작은지로 나누어서 lt와 rt를 조정해주었다.
 - lt와 rt 중 계속해서 동일한 값이 반복되는 경우를 방지하기 위해 같은 경우 인덱스를 조절해줬다.
+
+## 1028
+
+## 코딩테스트 리뷰
+
+이번 코딩테스트를 보며 생각하게 된 바가 많다.  
+소수를 구하는 발상을 몇 번 마주친 적 있었는데, 크게 중요하지 않다고 생각하고 대수롭지 않게 넘겼는데 그게 화근이 됐다.  
+초반에는 빠른 속도로 잘 풀다가 이 하나때문에 너무 크게 말리게 되었다. 게으름을 반성하고 후회한다...  
+또한 코딩테스트에서는 맨탈 관리가 상당히 중요하다고 느꼈다. 단순히 한 문제씩 푸는 것이 아니라 장시간에 여러 문제를 푸는 것 또한 훈련해야겠다.
+
+## isPrime
+
+```javascript
+const isPrime = (n) => {
+  if (n % 2 === 0) return false;
+  for (let i = 3; i <= Math.sqrt(n); i += 2;) {
+    if (n % i === 0) return false;
+  }
+  return true;
+}
+```
+
+- 이번 코딩테스트를 나락으로 빠트린 장본인이다.
+- 우선 짝수라면 소수가 될 수 없으므로 false를 반환한다.
+- 3부터 n의 제곱근보다 작거나 같을 때까지 2씩 증가시키며 n이 i로 나누어 떨어지면 false를 반환한다.
+  - 굳이 n까지 모든 수로 나누어 볼 필요는 없다.
+  - 모든 수는 제곱근의 제곱으로 나타낼 수 있으므로 굳이 제곱근 이상의 수로 나누어 볼 필요가 없기 때문이다.
+
+## countPrimes
+
+```javascript
+var countPrimes = function (n) {
+  let ch = Array(n).fill(0);
+  ch[0] = 1;
+  ch[1] = 1;
+
+  for (let i = 2; i * i < n; i++) {
+    if (ch[i] === 1) continue;
+    for (let j = i * i; j < n; j += i) {
+      ch[j] = 1;
+    }
+  }
+
+  return ch.filter((v) => !v).length;
+};
+```
+
+- 저번에 무심코 넘어갔던 에라토스테네스의 체 알고리즘을 활용한 문제를 해결했다.
+- 에라토스테네스의 체는 어떤 숫자까지의 소수를 찾을 때 유용한 알고리즘이다.
+- 이는 2부터 시작해서 배수로 소수 명단을 제거해나가는 식이다.
+- 이를 발전시켜 i가 2부터 i 제곱이 n보다 작을 때까지만 이를 제거해나가도 결과가 같다.
+- 이렇게 모든 소수 명단을 제거하고 마지막에 소수의 개수를 세어서 문제를 해결했다.
+
+## Maximum Subarray
+
+```javascript
+var maxSubArray = function (nums) {
+  let answer = -10000;
+  let lt = 0;
+  let sum = 0;
+
+  for (let rt = 0; rt < nums.length; rt++) {
+    sum += nums[rt];
+
+    while (sum < nums[rt]) {
+      sum -= nums[lt++];
+    }
+
+    answer = Math.max(answer, sum);
+  }
+
+  return answer;
+};
+```
+
+- 가장 최대가 되는 연속 부분수열을 구하는 문제
+- rt를 증가하면서 모든 숫자 합을 구하면서, 숫자의 합보다 rt위치에 있는 수가 크다면 lt를 증가시키며 최댓값을 구해줬다.
+
+## Valid Palindrome
+
+```javascript
+const isPalindrome = (s) => {
+  const answer = s.replace(/[^A-Za-z0-9]/g, "").toLowerCase();
+  return answer === answer.split("").reverse().join("");
+};
+```
+
+- 정규표현식을 활용해서 문제를 해결하였다.
+- 처음에는 `\W`를 사용해서 문제를 풀려고 했는데, 이는 알파벳과 숫자 그리고\_ 가 아닌 것들을 선택하기 때문에 이 방법을 사용하면 안됐다.
+
+## Maximum Product Subarray
+
+```javascript
+var maxProduct = function (nums) {
+  const arr = [];
+  let max = Number.MIN_SAFE_INTEGER;
+  let target = 1;
+
+  for (let i = 0; i < nums.length; i++) {
+    target *= nums[i];
+    max = Math.max(max, target);
+    if (nums[i] === 0) {
+      target = 1;
+    }
+  }
+
+  target = 1;
+
+  for (let i = nums.length - 1; i >= 0; i--) {
+    target *= nums[i];
+    max = Math.max(max, target);
+    if (nums[i] === 0) {
+      target = 1;
+    }
+  }
+
+  return max;
+};
+```
+
+- 왼쪽에서 한 번, 오른쪽에서 한 번 수를 쭉 곱해서 그 중 최댓값을 구했다.
+- 도중 0인 요소를 만나면 값을 1로 초기화 해주었다.
+- 이런 연속 수열 문제는 한 번쯤 왼쪽으로 쭉 오른쪽으로 쭉 계산하는 방법을 떠올려봐야겠다.
+
+## Product of Array Except Self
+
+```javascript
+var productExceptSelf = function (nums) {
+  const left = Array(nums.length).fill(1);
+  let tmp = 1;
+
+  for (let i = 1; i < nums.length; i++) {
+    tmp *= nums[i - 1];
+    left[i] = tmp;
+  }
+
+  tmp = 1;
+
+  for (let i = nums.length - 2; i >= 0; i--) {
+    tmp *= nums[i + 1];
+    left[i] *= tmp;
+  }
+
+  return left;
+};
+```
+
+- 왼쪽에서 한 번, 오른쪽에서 한 번 값을 곱한 뒤 두 수를 곱하면 현재 인덱스에 있는 수를 제외하고 총 곱이 되었다.
+- 발상 자체를 떠올리는 것이 리트코드 스타일은 익숙하지 않았다. 이를 꾸준히 풀어야겠다고 생각했다.
