--- a/_posts/2021-10-26-1025-1031.md
+++ b/_posts/2021-10-26-1025-1031.md
@@ -607,3 +607,74 @@ var productExceptSelf = function (nums) {
 
 - 왼쪽에서 한 번, 오른쪽에서 한 번 값을 곱한 뒤 두 수를 곱하면 현재 인덱스에 있는 수를 제외하고 총 곱이 되었다.
 - 발상 자체를 떠올리는 것이 리트코드 스타일은 익숙하지 않았다. 이를 꾸준히 풀어야겠다고 생각했다.
+
+## 1029
+
+# 80일 차
+
+객체나 배열을 비교할 때 `JSON.stringify` 메서드를 사용하면 모든 내용을 문자열로 변환하니 간단하게 요소 내용을 비교할 수 있다. ( 코테용 )
+
+### export 하는 방법은 두 가지
+
+1. named export
+   - 한 파일 내에서 여러 변수/클래스 등등을 export하는 것이 가능하다.
+   - 단 import 시 export 된 이름과 동일하게 설정해야 한다.
+   - 다른 이름으로 import할 수 있으나 as를 사용해야 한다.
+2. default export
+   - default로 선언된 모듈은 하나의 파일에서 단 하나의 변수 또는 클래스 등등만 export할 수 있다.
+   - import 할 때는 아무 이름으로나 가능하다.
+   - 단 var, let, const를 바로 export default 할 수 없다.
+     - import 받게 된 식별자는 무조건 const로 선언된 식별자처럼 처리되기 때문에 재할당이 불가능하다. 그래서 위와 같이 규칙이 정해진 것이다.
+
+null을 반환하지 말라 -> 클린 코드에서 나오는 이야기인데 이는 타입 언어에 관련된 이야기이다.
+좋은 코드라는 것은 굉장히 주관적인 것
+
+### 제네레이터
+
+_을 붙여주면 제네레이터 함수가 정의된다.  
+yield 라는 키워드를 쓰면 이 함수를 호출했을 때 어디까지 실행시켰다가 멈출수 있다.  
+-> await는 이를 이용해서 구현  
+-> 비동기처리 시 그 함수의 실행이 진짜 wait가 된다. await 문을 5개 나열하면 하나의 await가 5초 걸린다면 25초가 걸린다.  
+-> 그래서 비동기처리가 서로 연관이 없으면 Promise.all을 사용하여 병렬처리를 해야한다.  
+ _ Promise.all 앞에 await를 붙인다.
+
+- await는 뒤에 오는 프로미스가 resolve 될 때까지 기다린다.
+- 제네레이터 함수와 이 함수를 호출한 caller가 있는데, caller에게 중간중간 값을 줄 수 있다.
+- 제네레이터가 하는 역할은 함수의 실행을 중단했다가 재개하는 것이다. 일시 중단한 시점에서 값을 주고받을 수 있다.
+
+### async와 await의 장점
+
+- 비동기 처리를 동기처럼 쓸 수 있다.
+- try catch 문으로 에러를 처리할 수 있다.
+
+async 키워드는 함수의 가장 선두에 사용한다.
+
+코딩을 할 때 내부부터 쓰지말고, try catch 부터 작성한다.  
+-> 까먹지 않기 위해서
+
+### 개발 기본 팁
+
+- 개발용 코드는 public에 위치해서는 안된다.
+  -> 나중에 빌드된 js파일이 위치해야함
+- src폴더에 js폴더를 위치하게 하고 웹팩이 빌드한 파일을 public에 위치하도록 한다.
+
+source-map은 디버깅용
+
+웹팩은 서버랑 상관없이 클라이언트 소스코드를 번들링 해주는 것이다.
+
+babel을 사용해도 프로미스, 제네레이터 등을 대체할 문법이 없기 때문에 폴리필을 깔아줘야 한다.
+
+ESM은 기본적으로 defer이다.
+
+html 파일에서 script 태그를 동적으로 추가할수있다.  
+템플릿을 만들어 놓고 script 태그를 추가하도록 한다.  
+-> 실수를 방지하기 위함
+
+webpack 설정파일까지는 watch를 못해준다.  
+-> 즉 설정파일 변경 시 서버를 다시 켜줘야함
+
+### webpack-dev-server
+
+- 라이브 리로드 기능을 제공하는 개발용 서버
+- 빌드를 실행하면 번들링된 파일을 생성하기 때문에 규모가 큰 프로젝트라면 빌드에 시간이 걸린다.
+- webpack-dev-server는 실제 번들링된 파일을 생성하지 않고 번들링된 결과를 메모리에 저장하기 때문에 빌드 속도가 빠르다.
