--- a/_posts/2021-10-26-1025-1031.md
+++ b/_posts/2021-10-26-1025-1031.md
@@ -678,3 +678,45 @@ webpack 설정파일까지는 watch를 못해준다.
 - 라이브 리로드 기능을 제공하는 개발용 서버
 - 빌드를 실행하면 번들링된 파일을 생성하기 때문에 규모가 큰 프로젝트라면 빌드에 시간이 걸린다.
 - webpack-dev-server는 실제 번들링된 파일을 생성하지 않고 번들링된 결과를 메모리에 저장하기 때문에 빌드 속도가 빠르다.
+
+## 1030
+
+# 네이버 파이낸셜 리뷰
+
+프로그래머스 홈페이지에서 네이버 파이낸셜 과제 테스트가 올라왔길래 참여해봤다.  
+아직 리액트를 배우지는 않아서 2차까지 도전하지는 못할거 같았지만 경험삼아 1차만 시험을 맛봤다.  
+시험에는 사용해본 경험이 있는 Pagination이 나왔지만, 웹 vscode로 시험을 치는게 처음이라 서버를 어떻게 동작시켜야하는지 엄청 헤맸다.  
+결과적으로 마지막에 추가 기능을 구현하다가 실수를 저질러 망한 거 같기는 하지만 좋은 경험이었다고 생각한다.  
+이번 경험을 삼아 다음에는 초반에 헤매는 일이 적어질 것이라고 생각한다.
+
+## 함수 매개변수의 기본값 설정하기
+
+이번 페이지네이션을 구현하며 생성자 함수를 사용했는데,
+
+```javascript
+const pagination = new Pagination({
+  currentPage: 1,
+  totalItemCount: 300,
+  pagePerItemCount: 20,
+});
+```
+
+위와 같이 호출을 해서 화면에 렌더링을 해줘야 했다.  
+위의 세 개의 프로퍼티를 포함한 객체를 인수로 전달해줘야 했는데, 이를 객체 디스트럭처링 할당에서 기본값을 이용해 해결했다.  
+문제는 객체 자체를 전달하지 않을 때도 기본값을 설정해줘야 했는데, 이 때는 객체 자체가 undefined로 평가되면서 에러가 발생했다.
+
+```javascript
+function pagination({
+  currentPage = 1,
+  totalItemCount = 0,
+  pagePerItemCount = 20,
+} = {}) {
+  this.currentPage = currentPage;
+  this.totalItemCount = totalItemCount;
+  pagePerItemCount = pagePerItemCount;
+}
+```
+
+- 이를 위와 같이 해결했다.
+- 빈 오브젝트를 할당하지 않고 작성했을 때는 함수 호출 시 적어도 하나의 인자가 제공되어야 한다.
+- 무조건 객체를 넘기길 원하는 경우에는 빈 객체를 할당하지 않아도 되지만, 어떠한 매개변수 없이도 호출할 수 있기를 원한다면 위와 같이 작성할 경우 아무런 객체를 넘기지 않아도 세 객체에 기본값까지 할당된다.
