--- a/_posts/2021-11-02-1101-1107.md
+++ b/_posts/2021-11-02-1101-1107.md
@@ -40,3 +40,15 @@ category: TIL
 기본적으로 서버 쪽에 해당 출처를 허용하도록 구현을 해야하지만, 웹팩 DevServer에서 제공하는 Proxy 기능을 사용하여 이를 해결할 수 있다.
 
 웹팩 DevServer의 프록시를 사용하게 되면, 브라우저 API를 요청할 때 백엔드 서버에 직접적으로 요청을 하지 않고, 현재 DevServer의 주소로 요청을 하게 된다. 그러면 웹팩 DevServer에서 해당 요청을 받아 그대로 백엔드 서버로 전달하고, 백엔드 서버에서 응답한 내용을 다시 브라우저쪽으로 반환하게 된다. 프록시와 서버의 통신은 서버간의 통신이기 때문에 방화벽만 열려있다면 cors 설정을 추가적으로 하지 않아도 문제가 발생하지 않는다.
+
+## 1105
+
+## 여행 가계부 프로젝트를 진행하며 느낀 점
+
+- 시작이 반이다
+  - 웹팩을 설정하고, express라는 새로 배우는 기술 스택을 사용해서 폴더를 구성하려다보니 환경설정과 마크업만으로 정말 프로젝트 기간의 절반이 지나가 있었다. 프로젝트 환경 세팅의 어려움을 경험하면서 힘들기도 했지만, 웹팩이랑 익스프레스에 대해 공부하고 폴더 구성을 어떻게 할지 생각하면서 짧은 시간동안 많은 고민을 할 수 있었습니다.
+- 데이터베이스 없이 백엔드서버를 구축해보며 데이터베이스의 소중함을 느끼게 되었다.
+  데이터의 키도 직접 함수를 작성해서 생성해줘야했고, join 기능이 없다보니 서로 다른 파일에 있는 데이터에 접근하는 것이 힘들었다.
+- await와 async를 사용하고 여행 세부정보와 지출정보를 동시에 불러올 때 Promise.all 메서드를 사용해 병렬처리 해봄으로써 이에 대한 이해도가 높아졌다.
+- 프로젝트 도중 의도치 않은 시간 지연이 발생하는 것을 몸소 경험하며 시간 배분을 좀 더 여유롭게 해야겠다는 생각이 들었다.
+  프로젝트를 진행하면서 웹팩 설정을 익히고, express를 사용하며 분명 개발자로서 한층 성장했다고 생각하지만 그만큼 프론트에 많은 시간 투자를 하지 못한것 같다는 생각이 들어서 그 점이 조금 아쉬웠다. 다음 프로젝트때는 이번 경험을 기반으로 프로젝트 시간 분배를 잘 할 수 있도록 기획하고, 외부 api를 사용해서 백엔드 작업을 조금 줄이고 프론트를 더 많이 사용하도록 해야겠다.
