--- a/_posts/2021-11-02-1101-1107.md
+++ b/_posts/2021-11-02-1101-1107.md
@@ -52,3 +52,13 @@ category: TIL
 - await와 async를 사용하고 여행 세부정보와 지출정보를 동시에 불러올 때 Promise.all 메서드를 사용해 병렬처리 해봄으로써 이에 대한 이해도가 높아졌다.
 - 프로젝트 도중 의도치 않은 시간 지연이 발생하는 것을 몸소 경험하며 시간 배분을 좀 더 여유롭게 해야겠다는 생각이 들었다.
   프로젝트를 진행하면서 웹팩 설정을 익히고, express를 사용하며 분명 개발자로서 한층 성장했다고 생각하지만 그만큼 프론트에 많은 시간 투자를 하지 못한것 같다는 생각이 들어서 그 점이 조금 아쉬웠다. 다음 프로젝트때는 이번 경험을 기반으로 프로젝트 시간 분배를 잘 할 수 있도록 기획하고, 외부 api를 사용해서 백엔드 작업을 조금 줄이고 프론트를 더 많이 사용하도록 해야겠다.
+
+## 1106
+
+# 우아한 테크코스 지원
+
+벌써 일 년이라는 시간이 흐르고 우아한 테크코스 4기를 모집하는 글이 올라왔다.  
+이번에는 전적으로 네이버 카카오에 올인하기로 했기에 과정을 이어가지는 않지만, 작년에 지원했다가 무참히 떨어졌던 기억이 떠올라 코딩테스트라도 한 번 봐보자는 마음으로 지원했다.
+
+문제는 거의 100% 구현력을 확인하는 테스트였고, 작년에 비해 난이도가 있었다.  
+하지만 시간 내에 모든 문제를 풀어서 제출했다는 것에 의의를 둔다. 6번은 예상할 수 없는 테스트케이스 가지고 있을 거 같아 정답일지 장담할 수 없지만 후련하다.
