--- a/_posts/2021-11-02-1101-1107.md
+++ b/_posts/2021-11-02-1101-1107.md
@@ -62,3 +62,51 @@ category: TIL
 
 문제는 거의 100% 구현력을 확인하는 테스트였고, 작년에 비해 난이도가 있었다.  
 하지만 시간 내에 모든 문제를 풀어서 제출했다는 것에 의의를 둔다. 6번은 예상할 수 없는 테스트케이스 가지고 있을 거 같아 정답일지 장담할 수 없지만 후련하다.
+
+## 1107
+
+# 객체지향 프로그래밍과 함수형 프로그래밍
+
+## 객체지향 프로그래밍
+
+객체를 집합으로 프로그램을 표현하는 프로그래밍 패러다임
+
+### 추상화
+
+객체들의 공통적인 특징을 도출하는 것
+
+### 캡슐화
+
+객체가 독립적으로 역할을 할 수 있도록 데이터와 기능을 하나로 묶어 관리하는 것  
+실제로 구현되는 부분을 외부에 드러나지 않도록 하여 정보를 은닉할 수있다.
+
+### 상속
+
+하나의 클래스가 가진 특징(프로터티, 메서드)를 다른 클래스가 그대로 물려받는 것
+
+### 다형성
+
+동일한 명령의 해석을 연결된 객체에 의존하는 것
+ex) 오버라이딩, 오버로딩
+
+### 객체 지향 프로그래밍의 장점
+
+- 소프트웨어 생산성 향상
+- 실세계에 대한 쉬운 모델링
+- 보안성 향상
+
+## 함수형 프로그래밍
+
+함수형 프로그래밍을 이용해서 프로그램을 만든다는 것은 이런 함수들을 적용하고 묶어서 프로그램을 구성해나가는 것을 말한다.
+
+### 순수함수
+
+동일한 인자를 넣었을 때 항상 동일한 결과값을 반환해야하고, 외부에 전혀 영향을 받지 않도록 작성을 해야한다. 함수안에서 외부 상태값을 변경한다면 그것은 함수형 프로그래밍이 아닙니다.
+
+### 비상태 불변성을 유지해야한다.
+
+함수에서 전달된 데이터를 변경하는 것은 함수형이 아닙니다.
+함수에서 인자로 전달된 데이터를 변경하는 것이 아니라 새로운 버전의, 새로운 오브젝트로 만들어서 결과값으로 전달해야한다.
+그래서 side effect를 유발하지 않으므로(함수를 호출하면 외부 상태가 변경되거나, 예상하지 못한 에러가 발생하는 등) 불변성을 유지하기 때문에 안정적으로 동작할 수 있습니다.
+
+-> 부수효과가 없는 순수 함수를 사용하여 부작용을 제거해서 프로그램의 동작을 이해하고 예측을 용이하게 함
