--- a/_posts/2021-11-12-1108-1114.md
+++ b/_posts/2021-11-12-1108-1114.md
@@ -35,3 +35,31 @@ category: TIL
 
 **컴파일**이란 개발자가 작성한 소스코드를 바이너리 코드로 변환하는 과정  
 **빌드**란 소스코드 파일을 실행가능한 소프트웨어 산출물로 만드는 일련의 과정
+
+## 1109
+
+# this 바인딩
+
+this는 자신이 속한 객체 또는 자신이 생성할 가리키는 자기 참조 변수
+this를 통해 자신이 속한 객체 또는 자신이 생성할 인스턴스의 프로퍼티나 메서드를 참조할 수 있다.
+
+this 바인딩은 함수 호출 방식에 의해 동적으로 결정된다.
+
+자바스크립트의 this는 함수가 호출되는 방식에 따라 this에 바인딩될 값이 동적으로 결정된다.
+
+일반 함수로 호출된 모든 함수 내부의 this에는 전역 객체가 바인딩된다.  
+-> 메서드 내에서 정의한 중첩 함수 또는 콜백 함수가 일반 함수로 호출될 때는 this가 전역 객체를 바인딩하는 것은 문제가 있다.
+
+- 중첩 함수나 콜백 함수는 외부 함수를 돕는 헬퍼 함수의 역할을 하는데, 외부 함수인 메서드와 중첩 함수 또는 콜백 함수의 this가 일치하지 않는다.
+- 이를 일치시키기 위해 두 가지 방법이 있다. Function.prototype.bind 메서드를 사용하거나, 화살표 함수를 사용한다.
+
+메서드로 호출된 함수 내부의 this에는 메서드를 호출한 객체가 바인딩된다.
+
+생성자 함수 내부의 this에는 생성자 함수가 생성할 인스턴스가 바인딩된다.
+
+Function.prototype.call/apply/bind 메서드는 첫 번째 인수로 전달한 특정 객체를 호출한 함수의 this에 바인딩한다.
+
+- call/apply 메서드의 대표적인 용도는 arguments 같은 유사 배열 객체에 배열 메서드를 사용하는 경우
+- bind 메서드의 대표적인 용도는 메서드 내부의 중첩 함수나 콜백 함수의 this가 불일치하는 문제를 해결
+
+**바인딩** 식별자와 값을 연결하는 과정
