--- a/_posts/2021-11-12-1108-1114.md
+++ b/_posts/2021-11-12-1108-1114.md
@@ -182,3 +182,47 @@ const solution = (nums, order) => {
 - 트리를 구성하기 위해 계산해야 하는 요소 개수를 통해 트리를 생성하고 남은 부분에는 0으로 채운다.
 - update 함수는 상위 인덱스를 찾아가면서 값을 변경한다.
 - get 함수는 s번 째 수부터 e번 째 수 까지의 합을 구한다.
+
+## 1112
+
+# 기술 모의면접 피드백
+
+어제 봤던 기술 모의면접에서 부족하다고 들었던 부분들을 정리해보고, 몰랐던 내용은 작성하고 부족했던 부분은 어떻게 고칠 지 고민해보려고 한다.
+
+1. 자기소개에서 지망생, 학생이라는 표현을 사용했는데, 이 표현은 아마추어 같이 느껴지는 인상을 줄 수 있으므로 고칠 것  
+   문장을 끝맺을 워딩을 잘못한 것 같다. 느끼고 있던 것이지만 아직 인성면접에 대한 준비가 많이 부족한 것 같다. 이 부분을 충족시키기 위해 연습을 많이 해야겠다.
+2. 크로스 브라우징과 프로토타입 체인에 대해서는 다시 살펴볼 것  
+   생각보다 면접 질문 리스트에 있는 내용들 외의 질문들을 많이 받았는데, 위의 두 질문에 대해서는 확실하게 답하지 못한 것 같다. 이번 기회에 두 개념에 대해 확실히 정리하고 넘어가자
+3. ~같습니다라는 표현을 지양하자.  
+   면접관님의 총평은 답변에 대한 정확도가 높아 위와 같은 표현을 지양하자는 것이었다. 이번 녹화 영상을 나도 다시 한 번 살펴봤는데, 내가 확실히 아는 것에 대해서도 불확실한 표현으로 자신감이 없어보이는 듯한 느낌을 주는 것 같았다. 지금부터 훈련하여 습관을 제대로 만들어야겠다.
+
+## 총평
+
+이외에도 눈알 돌리는 모습이라던지, 정면을 응시하는 측면에서 스스로 고쳐야 할 점들이 보였다. 그래도 예상치 못했던 질문들을 받은 것에 비해 선방했다고 생각한다. 면접 준비는 꾸준하게 해야겠다고 생각이 들었고, 인성 면접을 잘 준비하고 프로젝트에 관련한 질문들을 잘 대비해야할 것 같다.
+
+## 크로스 브라우징
+
+웹 규격에 맞는 코딩을 함으로써 어느 브라우저에서나 사이트가 제대로 보여지고 작동되도록 하는 기법
+
+### 크로스 브라우징을 한 경험
+
+1. PostCSS 플러그인 중 하나인 autoprefixer를 사용해서 -webkit-등의 prefix를 붙여줬다.
+2. Babel을 사용해서 최신 사양의 자바스크립트 코드를 IE나 구형 브라우저에서도 동작하는 ES5 이하의 코드로 변환하였다.
+3. Can I Use와 MDN을 참고해서 사용하려는 기능이 모든 브라우저에서 지원하는 기능인지 확인하며 크로스 브라우징을 한 경험이 있다.
+4. css 속성에 readonly와 관련한 속성으로 :read-only와 [readonly]가 있다. 그러나 :read-only의 경우에는 IE에서는 작동이 되지 않기 떄문에 [readonly]를 통해 인터넷 익스플로어에서도 작동할 수 있도록 했다.
+
+## 프로토타입과 프로토타입에서 상속을 구현하는 방법
+
+### 프로토타입
+
+자바스크립트에서는 프로토타입을 기반으로 상속을 구현한다.
+
+- 생성자 함수가 생성할 모든 인스턴스가 공통적으로 사용할 프로퍼티나 메서드를 프로토타입에 미리 구현해 두면 인스턴스는 별도의 구현 없이 상위 객체인 프로토타입의 자산을 공유하여 사용할 수 있다.
+- 프로토타입 객체는 생성자 함수가 평가되어 함수 객체를 생성하는 시점에 더불어 생성된다.
+- 프로토타입을 상속받은 하위 객체는 상위 객체의 프로퍼티를 자신의 프로퍼티처럼 자유롭게 사용할 수 있다.
+- 모든 객체는 `[[prototype]]`이라는 내부 슬롯을 가지며, 이 내부슬롯의 값은 프로토타입의 참조다.
+
+### 프로토타입에서 상속을 구현하는 방법
+
+- JS는 객체의 프로퍼티에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티가 없다면 `[[Prototype]]` 내부 슬롯의 참조를 따라 자신의 부모 역할을 하는 프로토타입의 프로퍼티를 순차적으로 검색한다.
+- 이를 프로토타입 체인이라 한다. 프로토타입 체인은 자바스크립트가 객체지향 프로그래밍의 상속을 구현하는 메커니즘이다.
