--- a/_posts/2021-11-20-1115-1121.md
+++ b/_posts/2021-11-20-1115-1121.md
@@ -33,3 +33,28 @@ root와 대상 요소가 교차하는 정도를 intersection ratio라고 한다.
 ## Intersection observer 장단점
 
 IE를 지원하지 않는다는 단점이 존재하지만 감시하고자 하는 요소가 다른 요소에 들어가거나 나갈 때 실행할 콜백 함수를 등록할 수 있게 한다. 이전 프로젝트에서 사용한 방식은 디바운스 처리를 한다고 하더라도 페이지를 스크롤할 때 반복적으로 교차 탐지를 실행하게 된다. 하지만 이번 프로젝트에 적용한 방식은 사이트는 요소의 교차를 지켜보기 위해 메인 스레드를 사용할 필요가 없어지고 브라우저의 원하는 대로 교차 영역 관리를 최적할 수 있어서 유효한 방법이라고 생각한다.
+
+<br />
+<br />
+
+## 1116
+
+# 인성 모의 면접 피드백
+
+인성 모의 면접 결과가 생각보다 좋았다. 좋았던 점과 좀 더 메꿔야 할 것 같다고 느낀 점을 정리해보고자 한다.
+
+## 좋았던 점
+
+- 프론트엔드 개발자가 되게 된 계기에서는 처음에 백엔드 개발자를 희망했다가 프론트엔드 개발자를 희망하게 된 나의 경험을 토대로 전달하였는데, 이 과정에 녹아들어있는 프론트엔드 개발자에 대한 이해도나 경험을 녹여냈다는 점에서 좋은 평가를 받은 것 같다.
+- 장단점을 고민 끝에 준비하여 말했는데, 근거를 준비해서 전달하니 높은 점수를 받을 수 있었던 것 같다. 나에 대한 소개를 할 때는 항상 근거와 함께 준비하도록 하자.
+
+## 부족했던 점이나 아쉬웠던 점
+
+- 자기 소개 때 좌우명으로 나를 소개했는데, 말이 꼬여서 어렵다는 평가를 받았다... 듣는 사람을 더 고려해서 알아듣기 쉽도록 해야겠다.
+- 이번 면접 때는 다행히 큰 지적을 받지 않았지만 내가 했던 프로젝트에 대해 더 자세하게 정리해야 할 필요성을 느꼈다.
+- 커리어 골과 협업 시 발생했던 문제점 및 트러블에 대해서는 다시 정리를 해야할 것 같다.
+- 내용은 좋았지만 좀 더 어떤 워딩을 사용하여 의견을 알아 듣기 좋게 전달할지를 고민해야겠다.
+
+## 결론
+
+전체적으로 준비한 것에 비해 좋은 평가를 받았고 나에 대해 돌아볼 수 있는 좋은 시간이었다. 어떤 부분이 부족한지를 파악했고, 어떤 점을 메꿔야 할 지에 대해 알 수 있었다.
