--- a/_posts/2021-11-20-1115-1121.md
+++ b/_posts/2021-11-20-1115-1121.md
@@ -58,3 +58,74 @@ IE를 지원하지 않는다는 단점이 존재하지만 감시하고자 하는
 ## 결론
 
 전체적으로 준비한 것에 비해 좋은 평가를 받았고 나에 대해 돌아볼 수 있는 좋은 시간이었다. 어떤 부분이 부족한지를 파악했고, 어떤 점을 메꿔야 할 지에 대해 알 수 있었다.
+
+<br />
+<br />
+
+## 1117
+
+# 모의 코딩테스트 회고
+
+최근에 일정이 많이 바빠지면서 계속되는 프로젝트와 면접 준비를 병행하다 보니 자연스레 코딩테스트를 준비할 시간이 적어졌다.  
+그리고 이번 코딩테스트에서는 예상치 못하게 다이나믹 프로그래밍 문제가 많이 나와 많은 사람들이 당황했던 것 같다.  
+난이도에 비해 나쁘지 않은 결과를 받았지만 DP 복습을 해야겠다는 생각이 들었다.
+
+앞 쪽에 포진한 문제 중 비슷하지만 약간 다른 두 문제가 있었다. 동전의 개수가 무제한인 배열이 주어지고, 그 배열로 목표 금액을 구할 수 있는 경우의 수를 출력하는 문제였다. 한 문제는 경우의 수 중 순서만 다른 것은 같은 경우로, 다른 문제는 순서가 다른 것은 다른 경우로 경우의 수를 출력해야 했다.
+
+두 문제 해결하지 못해서 다시 한 번 풀어보았다.
+
+## 순서가 다른 것은 같은 경우
+
+```javascript
+const solution = (nums, m) => {
+  const dy = Array(m + 1).fill(0);
+  dy[0] = 1;
+
+  for (let i = 0; i < nums.length; i++) {
+    for (let j = m; j >= 1; j--) {
+      let k = 1;
+      while (j - nums[i] * k >= 0) {
+        dy[j] += dy[j - nums[i] * k];
+        k++;
+      }
+    }
+  }
+
+  return dy[m];
+};
+```
+
+- 실제 모의 코딩테스트 중에는 DFS로 모든 경우를 구하고 순서만 비교하여 정확도라도 맞히려했는데, 정확도에서마저도 시간 에러가 발생했다.
+- 두 문제 모두 dy[i]는 i원 까지의 경우의 수이다.
+- 이전에 풀었던 동전 바꿔주기 문제와 상당히 유사한대, 그 때는 동전의 개수가 정해져 있었다면 이 문제에서는 동전 개수를 무제한으로 사용할 수 있다는 차이점이 있었다.
+- 그렇기에 2중 포문까지의 로직은 같지만, 가장 내부 로직에서는 그저 목표로 하는 돈에서 동전 단위 x 개수가 0보다 크거나 같을 때까지 모두 더해서 목표 돈까지의 경우의 수를 구해줬다.
+- 이 로직을 동작하도록 하기 위해 dy[0]은 1로 초기화해줬다.
+
+## 순서가 다른 것은 다른 경우
+
+```javascript
+const solution = (nums, m) => {
+  const dy = Array(m + 1).fill(0);
+
+  nums.forEach((num) => {
+    dy[num] = 1;
+  });
+
+  for (let i = 1; i <= m; i++) {
+    let sum = 0;
+    for (let j = 0; j < nums.length; j++) {
+      if (i - nums[j] < 0) continue;
+      sum += dy[i - nums[j]];
+    }
+
+    dy[i] += sum;
+  }
+
+  return dy[m];
+};
+```
+
+- 위의 문제와는 다르게 순서가 다른 경우는 각각 다른 경우로 계산하여 경우의 수를 반환해줘야 했다.
+- 그렇기에 돌다리 건너기 문제와 유사한 방식으로 해결했다.
+- 우선 동전 배열에 있는 인덱스에 값을 1로 초기화해줬다.
+- 그리고 dy를 순회하며 해당 인덱스에서 동전 배열에 있는 값만큼 뺀 곳에 위치한 경우의 수를 모두 더해 해당 인덱스에 더해줬다.
